--- a/오답노트/2020-1.md
+++ b/오답노트/2020-1.md
@@ -149,3 +149,44 @@ CASE(Computer Aided Softsare Engineering)는 소프트웨어 개발 과정에서
 
 ## 15. 데이터 흐름도(DFD)의 구성 요소
 - 프로세스(Process), 자료 저장소(Data Store), 자료 흐름(Flow), 단말(Terminator)
+
+## 16. UML(Unified Modeling Language)
+스테레오 타입은 UML에서 표현하는 기본 기능 외에 추가적인 기능을 표현하기 위해 사용되며, *길러멧*이라고 부르는 겹화살괄호(`<<>>`)에 표현할 형태를 기술한다.
+
+- `<<include>>`: 연결된 다른 UML요소에 대해 포함 관계에 있는 경우 
+- `<<extend>>`: 연결된 다른 UML요소에 대해 확장 관계에 있는 경우
+- `<<interface>>`: 인터페이스를 정의
+- `<<exception>>`: 예외를 정의
+- `<<constructor>>`: 생성자 역할을 수행
+
+## 17. 미들웨어(Middleware)
+미들웨어는 운영체제와 응용 프로그램, 또는 서버와 클라이언트 사이에서 다양한 서비스를 제공하는 소프트웨어이다.
+
+1. `DB(DataBase)`
+- 데이터베이스 벤더에서 제공하는 클라이언트에서 원격의 데이터베이스와 연결하기 위한 미들웨어
+- DB를 이용하여 시스템을 구축하는 경우 보통 **2-Tier** 아키텍처라고 함
+
+2. `RPC(Remote Procedure Call)`
+- 응용 프로그램의 프로시저를 사용하여 원격 프로시저를 로컬 프로시저처럼 호출하는 방식의 미들웨어
+
+3. `MOM(Message Oriented Middleware)`(메시지 지향 미들웨어)
+- 메세지 기반의 비동기형 메세지를 전달하는 방식의 미들웨어
+- 온라인 업무보다는 **이기종 분산 데이터 시스템의 데이터 동기**를 위해 많이 사용됨
+
+4. `TP-Monitor(Transaction Processing Monitor)`
+- 항공기나 철도 예약 업무 등과 같은 온라인 트랜잭션 업무에서 *트랜잭션을 처리 및 감시*하는 미들웨어
+- 사용자 수가 증가해도 빠른 응답 속도를 유지해야 하는 업무에 주로 사용됨
+
+5. `ORB(Object Request Broker)`(객체 요청 브로커)
+- *객체 지향* 미들웨어로 코바(CORBA) 표준 스펙을 구현한 미들웨어
+- 최근에는 TP-Monitor의 장점인 트랜잭션 처리와 모니터링 등을 추가로 구현한 제품도 있음
+
+6. `WAS(Web Application Server)`(웹 애플리케이션 서버)
+- 정적인 콘텐츠를 처리하는 웹 서버와 달리 사용자의 요구에 따라 변하는 동적인 콘텐츠를 처리하기 위해 사용
+- 클라이언트/서버 환경보다는 웹 환경을 구현하기 위한 미들웨어
+
+## 18. 요구사항 분석
+- 사용자 요구의 *타당성을 조사*하고 *비용과 일정에 대한 제약을 설정*한다.
+- 사용자의 *요구를 정확하게 추출하여 목표*를 정하고, 어떤 방식으로 해결할 것인지를 결정
+- 사용자의 요구사항을 *정확하고 일관성 있게 분석하여 문서화* 해야 한다.
+- `UML(Unified Modeling Language)`, `자료 흐름도(DFD)`, `자료 사전(DD)`, `소단위 명세서(Mini-Spec)`, `개체 관계도(ERD)`, `상태 전이도(STD)`, `제어 명세서` 등의 도구를 이용한다.
