docs: edit docs

--- a/오답노트/2020-1.md
+++ b/오답노트/2020-1.md
@@ -190,3 +190,68 @@ CASE(Computer Aided Softsare Engineering)는 소프트웨어 개발 과정에서
 - 사용자의 *요구를 정확하게 추출하여 목표*를 정하고, 어떤 방식으로 해결할 것인지를 결정
 - 사용자의 요구사항을 *정확하고 일관성 있게 분석하여 문서화* 해야 한다.
 - `UML(Unified Modeling Language)`, `자료 흐름도(DFD)`, `자료 사전(DD)`, `소단위 명세서(Mini-Spec)`, `개체 관계도(ERD)`, `상태 전이도(STD)`, `제어 명세서` 등의 도구를 이용한다.
+
+## 19. 공통 모듈 구현 시 준수해야 할 명세 기법
+여러 프로그램에서 공통적으로 사용할 수 있는 모듈 구현 시, 다음의 명세 기법을 준수하여야 한다.
+
+1. `정확성`: 시스템 구현 시 *해당 기능이 필요*하다는 것을 알 수 있도록 정확히 작성
+2. `명확성`: 해당 기능을 *이해할 때 중의적으로 해석되지 않도록* 명확히 작성
+3. `완전성`: 시스템 *구현을 위해 필요한 모든 것*을 기술
+4. `일관성`: 공통 기능들 간 *상호 충돌이 발생하지 않도록* 작성
+5. `추적성`: 기능에 대한 요구사항이 *출처, 관련 시스템 등의 관계를 파악할 수 있도록* 작성
+
+## 20. Structural Diagram(구조적 다이어그램)의 종류
+1. 클래스 다이어그램
+- 클래스와 클래스가 가지는 속성, 클래스 사이의 관계를 표현
+- 시스템의 구조를 파악하고 구조상의 문제점을 도출할 수 있음
+
+2. 객체 다이어그램
+- 클래스에 속한 사물(객체)들, 즉 인스턴스를 특정 시점의 객체와 객체 사이의 관계로 표현
+- *럼바우 객체지향 분석 기법* 에서 객체 모델링에 활용됨
+
+3. 컴포넌트 다이어그램
+- 실제 구현 모듈인 컴포넌트 간의 관계나 컴포넌트 간의 인터페이스를 표현함
+- *구현 단계에서 사용*
+
+4. 배치 다이어그램
+- 결과물, 프로세스, 컴포넌트 등 **물리적 요소들의 위치를 표현**
+- *노드와 의사소통(통신) 경로*로 표현
+- *구현 단계에서 사용*
+
+5. 복합체 구조 다이어그램
+- 클래스나 컴포넌트가 복합 구조를 갖는 경우 *그 내부 구조를 표현*
+
+6. 패키지 다이어그램
+- 유스케이스나 클래스 등의 **모델 요소들을 그룹화**한 패키지들의 관계를 표현
+
+## 21. 경계 값 분석 기법
+- 입력 조건의 중간값보다 경계값에서 오류가 발생될 확률이 높다는 점을 이용하여 입력 조건의 경계값을 테스트 케이스로 선정하여 검사하는 기법
+
+## 22. 트리 관련 용어
+1. `노드(Node)`: 트리의 기본 요소로서 자료 항목과 다른 항목에 대한 가지(branch)를 합친 것
+2. `근 노드(Root Node)`: 트리의 맨 위에 있는 노드
+3. `디그리(Degree, 차수)`: 각 노드에서 뻗어 나온 가지의 수
+4. `단말 노드(Terminal Node)` = 잎 노드(Leaf Node): 자식이 하나도 없는 노드, 즉 디그리가 0인 노드
+5. `자식 노드(Son Node)`: 어떤 노드에 연결된 다음 레벨의 노드들
+6. `부모 노드(Parent Node)`: 어떤 노드에 연결된 이전 레벨의 노드들
+7. `형제 노드(Brother Node)`: 동일한 부모를 갖는 노드들
+8. `트리의 디그리`: **노드들의 디그리 중에서 가장 많은 수**
+
+## 23. 블랙박스 테스트의 종류
+1. `동치 분할 검사(Equivalence Partitioning Testing)`
+- *입력 자료에 초점*을 맞춰 테스트 케이스(동치 클래스)를 만들고 검사하는 방법으로, 동등 분할 기법이라고도 함
+- 프로그램의 입력 조건에 타당한 입력 자료와 타당하지 않은 입력 자료의 개수를 *균등하게* 하여 테스트 케이스를 정하고, 해당 입력 자료에 맞는 결과가 출력되는지 확인하는 기법
+
+2. `경계값 분석(Boundary value Analysis)`
+- 입력 자료에만 치중한 동치 분할 기법을 보완
+- 입력 조건의 중간값보다 *경계값*에서 오류가 발생될 확률이 높다는 점을 이용하여 입력 조건의 *경계값을 테스트 케이스로 선정*하여 검사
+
+3. `원인-효과 그래프 검사(Cause-Effect Graphinf Testing)`
+- 입력 데이터 간의 관계와 출력에 영향을 미치는 *상황을 체계적으로 분석*한 후, 효용성이 높은 테스트 케이스를 선정
+
+4. `오류 예측 검사(Error Guessing)`
+- 과거의 경험이나 확인자의 감각으로 테스트
+- 다른 블랙 박스 테스트 기법으로는 찾아낼 수 없는 오류를 찾아내는 일련의 보충적 검사 기법이며, 데이터 확인 검사라고도 함
+
+5. `비교 검사(Comparision Testing)`
+- *여러 버전의 프로그램에 동일한 테스트 자료를 제공*하여 동일한 결과가 출력되는지 테스트
