--- a/오답노트/2020-1.md
+++ b/오답노트/2020-1.md
@@ -255,3 +255,49 @@ CASE(Computer Aided Softsare Engineering)는 소프트웨어 개발 과정에서
 
 5. `비교 검사(Comparision Testing)`
 - *여러 버전의 프로그램에 동일한 테스트 자료를 제공*하여 동일한 결과가 출력되는지 테스트
+
+## 24. 테스트 드라이버와 스텁의 차이점
+1. `드라이버(Driver)`
+- 테스트 대상의 *하위 모듈을 호출*하는 도구로, 매개변수를 전달하고 모듈 테스트 수행 후의 결과를 도출
+- 상향식 테스트에서 사용
+- 이미 존재하는 하위 모듈과 *존재하지 않는 상위 모듈* 간의 인터페이스 역할을 함
+
+2. `스텁(Stub)`
+- 제어 모듈이 호출하는 타 모듈의 기능을 단순히 수행하는 도구로, 일시적으로 필요한 조건만을 가지고 있는 시험용 모듈
+- 상위 모듈은 있지만 하위 모듈이 없는 경우 *하위 모듈을 대체*
+- 하향식 테스트에서 사용, 시험용 모듈이기 때문에 일반적으로 드라이버보다 작성하기 쉬움
+
+## 25. ISO/ISE 9126 - 소프트웨어 품질 특성과 평가를 위한 표준 지침
+1. `기능성`: 소프트웨어가 사용자의 요구사항을 정확하게 만족하는 기능을 제공하는지 여부
+- 적절성/적합성, 정밀성/정확성, 상호 운용성, 보안성, 준수성
+
+2. `신뢰성`: 소프트웨어가 요구된 기능을 정확하고 일관되게 오류 없이 수행할 수 있는 정도
+- 성숙성, 고장 허용성, 회복성
+
+3. `사용성`: 사용자와 컴퓨터 사이에 발생하는 어떠한 행위에 대해 사용자가 정확하게 이해하고 사용하며, 향후 다시 사용하고 싶은 정도
+- 이해성, 학습성, 운용성, 친밀성
+
+4. `효율성`: 사용자가 요구하는 기능을 할당된 시간 동안 한정된 자원으로 얼마나 빨리 처리할 수 있는지 정도
+- 시간 효율성, 자원 효율성
+
+5. `유지 보수성`: 환경의 변화 또는 새로운 요구사항 발생 시 소프트웨어를 개선하거나 확장할 수 있는 정도
+- 분석성, 변경성, 안정성, 시험성
+
+6. `이식성`: 소프트웨어가 다른 환경에도 얼마나 쉽게 적용할 수 있는지 정도
+- 적용성, 설치성, 대체성, 공존성
+
+## 26. 애플리케이션 테스트 관련 용어
+1. `결함 집중(Detect Clustering)`: 대부분의 결함이 소수의 특정 모듈에 집중해서 발생하는 것
+2. `파레토의 법칙(Pareto Principle)`: 테스트로 발견된 80%의 오류는 20%의 모듈에서 발견됨
+3. `살충제 패러독스(Pesricide Paradox)`: 같은 테스트 케이스를 가지고, 테스트를 계속해서 반복하는 경우 어느 시점부터는 더 이상 결함을 발견할 수 없음
+4. `오류-부재의 궤변(Absence of Errors Fallacy)`: 소프트웨어의 결함을 모두 분석해도 사용자의 요구사항을 만족시키지 못하면 해당 소프트웨어는 품질이 높다고 말할 수 없음
+
+## 27. DRM(디지털 저작권 관리)의 기술 요소
+- `암호화(Encryption)`: 콘텐츠 및 라이선스를 암호화하고 전자 서명을 할 수 있는 기술
+- `키 관리(Key Management)`: 콘텐츠를 암호화한 키에 저장 및 분배 기술
+- `암호화 파일 생성(Packager)`: 콘텐츠를 암호화된 콘텐츠로 생성하기 위한 기술
+- `식별 기술(idenfication)`: 콘텐츠에 대한 식별 체계 표현 기술
+- `저작권 표현(Right Expression)`: 라이선스의 내용 표현 기술
+- `정책 관리(Policy Management)`: 라이선스 발급 및 사용에 대한 정책 표현 및 관리 기술
+- `크랙 방지(Tamper Resitanse)`: 크랙에 의한 콘텐츠 사용 방지 기술
+- `인증(Authntication)`: 라이선스 발급 및 사용의 기준이 되는 사용자 인증 기술
