docs: edit docs

--- a/오답노트/2020-1.md
+++ b/오답노트/2020-1.md
@@ -301,3 +301,39 @@ CASE(Computer Aided Softsare Engineering)는 소프트웨어 개발 과정에서
 - `정책 관리(Policy Management)`: 라이선스 발급 및 사용에 대한 정책 표현 및 관리 기술
 - `크랙 방지(Tamper Resitanse)`: 크랙에 의한 콘텐츠 사용 방지 기술
 - `인증(Authntication)`: 라이선스 발급 및 사용의 기준이 되는 사용자 인증 기술
+
+### 28. 인터페이스 보안 기능 적용
+1. 네트워크 영역
+- 인터페이스 송/수신간 스니핑 등을 이용한 데이터 탈취 및 변조 위협을 방지하기 위해 네트워크 *트래픽에 대한 암호화*를 설정함
+- 암호화는 인터페이스 아키텍처에 따라 *IPSec, SSL, S-HTTP*등의 다양한 방식으로 적용함
+
+2. 애플리케이션 영역
+- *소프트웨어 개발 보안 가이드*를 참조하여 애플리케이션 코드 상의 보안 취약점을 보완
+
+3. 데이터베이스 영역
+- 데이터베이스, 스키마, 엔티티의 접근 권한과 프로시저, 트리거 등 데이터베이스 동작 객체의 보안 취약점에 보안 기능을 적용
+
+4. IPSec(IP Security): 네트워크 계층에서 IP 패킷 단위의 데이터 변조 방지 및 은닉 기능을 제공하는 프로토콜로, 암호화 수행시 양방향 암호화를 지원함
+
+## 29. 인터페이스 구현 검증 도구
+1. `xUnit`
+- 같은 테스트 코드를 여러 번 작성하지 않게 도와주고, 테스트마다 예상 결과를 기억할 필요가 없게 하는 자동화된 해법을 제공하는 단위 테스트 프레임워크
+- Smalltalk에 처음 적용되어 SUnit 이라는 이름이었으나 Java용의 JUnit, C++ 용의 CppUnit, .NET용의 NUnit, Http용의 HttpUnit 등 *다양한 언어에 적용*되면서 xUnit 으로 통칭되고 있음
+
+2. `STAF`
+- 서비스 호출 및 *컴포넌트 재사용* 등 다양한 환경을 지원하는 테스트 프레임워크
+- 크로스 플랫폼, 분산 소프트웨어 테스트 환경을 조성할 수 있도록 지원
+- 분산 소프트웨어의 경우 각 분산 환경에 설치된 *데몬이 프로그램 테스트에 대한 응답을 대신*하며, 테스트가 완료되면 이를 통합하고 자동화하여 프로그램을 완성함.
+
+3. `FITNesse`
+- *웹 기반* 테스트케이스 설계, 실행, 결과 확인 등을 지원하는 테스트 프레임워크
+
+4. `NTAF`
+- FitNess의 장점인 협업 기능과 STAF의 장점인 재사용 및 확장성을 통합한 NHN의 테스트 자동화 프레임워크
+
+5. `Selenium`
+- 다양한 브라우저 및 개발 언어를 지원하는 웹 애플리케이션 테스트 프레임워크
+
+6. `watir`
+- *Ruby*를 사용하는 애플리케이션 테스트 프레임워크
+
