--- a/오답노트/2020-1.md
+++ b/오답노트/2020-1.md
@@ -337,3 +337,42 @@ CASE(Computer Aided Softsare Engineering)는 소프트웨어 개발 과정에서
 6. `watir`
 - *Ruby*를 사용하는 애플리케이션 테스트 프레임워크
 
+## 30. SW 패키징 도구 활용 시 고려 사항
+- 사용자의 시스템 환경, 즉 운영체제(OS), CPU, 메모리 등에 필요한 *최소 환경을 정의*한다.
+- UI는 사용자가 눈으로 직접 확인할 수 있도록 *시각적인 자료와 함께 제공*하고 *메뉴얼과 일치*시켜 패키징한다.
+- 소프트웨어는 단순히 패키징하여 배포하는 것으로 끝나는 것이 아니라 **하드웨어와 함께 관리**될 수 있도록 *Managed Service*형태로 제공하는 것이 좋다.
+- 사용자에게 배포되는 소프트웨어이므로 내부 콘텐츠에 대한 *암호화 및 보안*을 고려한다.
+- 다른 여러 콘텐츠 및 단말기 간 DRM(디지털 저작권 관리) 연동을 고려한다.
+- 제품 소프트웨어 종류에 *적합한 알고리즘*을 적용한다.
+
+## 31. 소프트웨어 형상 관리
+형상 관리(SCM: Software Configuration Management)는 소프트웨어의 개발 과정에서 *소프트웨어의 변경 사항을 관리하기 위해* 개발된 일련의 활동이다.
+
+## 32. White Box Testing
+화이트박스 테스트는 모듈의 원시 코드를 오픈 시킨 상태에서 원시 코드의 *논리적인 모든 경로를 테스트* 하여 테스트 케이스를 설계하는 방법이다.
+
+- 모듈 안 작동을 **직접 관찰** 한다.
+- 원시 코드(모듈)의 **모든 문장을 한 번 이상 실행**한다.
+- 프로그램의 제어 구조에 따라 선택, 반복 등의 분기점 부분들을 수행함으로서 **논리적 경로를 제어한다.**
+
+### 화이트박스 테스트의 종류
+1. `기초 경로 검사(Base Path Testing)`: 대표적인 화이트박스 테스트 설계 기법, 절차적 설계의 **논리적 복잡성을 측정**할 수 있게 해 줌, 실행 경로의 기초를 정의하는 데 지침으로 사용
+
+2. `제어 구조 검사(Control Structure Testing)`
+- 조건 검사(Condition Testing): 프로그램 모듈 내에 있는 **논리적 조건을 테스트**
+- 루프 검사(Loop Testing): 프로그램의 **반복 구조에 초점을 맞춰** 테스트 
+- 데이터 흐름 검사(Data Flow Testing): **변수의 정의**와 **변수 사용의 위치**에 초점을 맞춰 테스트
+
+
+## 33. 외계인 코드(Alien Code)
+아주 오래되거나 참고문서 또는 개발자가 없어 유지보수 작업이 어려운 코드
+
+## 34. 트리의 운행(순회)법
+```
+  A
+ /\
+B  C
+```
+1. `Preorder 운행(전위 순회)`: *Root-> Left -> Right* / A -> B -> C
+2. `Inorder 운행(중위 순회)`: *Left -> Root -> Right* / B -> A -> C
+3. `Postorder 운행(후위 순회)`: *Left -> Right -> Root* / B -> C -> A
