--- a/오답노트/2020-1.md
+++ b/오답노트/2020-1.md
@@ -376,3 +376,44 @@ B  C
 1. `Preorder 운행(전위 순회)`: *Root-> Left -> Right* / A -> B -> C
 2. `Inorder 운행(중위 순회)`: *Left -> Root -> Right* / B -> A -> C
 3. `Postorder 운행(후위 순회)`: *Left -> Right -> Root* / B -> C -> A
+
+## 35, 36. 빅오 표기법
+1. `O(1)`: 입력값(n)에 관계 없이 일정하게 문제 해결애 하나의 단계만을 가짐. (스택의 삽입(Push), 삭제(Pop))
+2. `O(log2n)`: 문제 해결에 필요한 단계가 입력값(n) 또는 조건에 의해 *감소*함. (이진 트리, 이진 검색)
+3. `O(n)`: 문제 해결에 필요한 단계가 입력값(n)과 1:1의 관계를 가짐 (for문)
+4. `O(nlog2n)`: 문제 해결에 필요한 단계가 *n(log2n)*번만큼 수행됨. (*힙 정렬, 2-Way 합병 정렬*)
+5. `O(n^2)`: 문제 해결에 필요한 단계가 입력값(n)의 제곱만큼 수행됨(삽입 정렬, 쉘 정렬, 선택 정렬, 버블 정렬, 퀵 정렬)
+6. `O(2^n)`: 문제 해결에 필요한 단계가 2의 입력갑(n)제곱만큼 수행됨(*피보나치 수열*)
+
+## 37. ISO/IEC 9126 '기능성' 의 하위 특성
+- 적절성/적합성, 정밀성/정확성, 상호 운용성, 보안성, 준수성
+
+## 38. EAI(Enterprise Application Integration)
+EAI는 *기업 내 각종 애플리케이션 또는 플랫폼* 간의 *정보 전달, 연계, 통합 등 상호 연동*이 가능하게 해 주는 솔루션으로, 비즈니스 간 통합 및 연계성을 증대시켜 효율성과 각 시스템 간의 확장성을 높여 준다.
+
+### EAI의 구축 유형
+1. `Point-to-Point`
+- 가장 기본적인 통합 방식, 애플리케이션을 *1:1*로 연결함. 
+- 변경 및 재사용이 어ㅓㅕ움
+
+2. `Hub & Spoke`
+- 단일 접점인 허브 시스템을 통해 데이터를 전송하는 *중앙 집중형 방식*
+- 확장 및 유지 보수 용이
+- 허브 장애 발생 시 *시스템 전체에 영향을 미침*
+
+3. `Message Bus(ESB 방식)`
+- 애플리케이션 사이에 *미들웨어*를 두어 처리하는 방식
+- 확장성이 뛰어나며 *대용량 처리가 가능함*
+
+4. `Hybrid`
+- *Hub&Spoke*와 *Message Bus*의 통합 방식
+- 그룹 내에서는 Hub&Spoke 방식을, 그룹 간에는 Message Bus 방식을 사용
+- 필요한 경우, 한 가지 방식으로 EAI 구현이 가능함
+- *데이터 병목 현상을 최소화할 수 있음*
+
+## 39. 소스 코드 품질 정적 분석 도구
+- 작성한 소스 코드를 *실행하지 않고* 코딩 표준이나 코딩 스타일, 결함 등을 확인하는 코드 분석 도구
+- 비교적 애플리케이션 개발 초기의 결함을 찾는 데 사용되고, 개발 완료 시점에서는 개발된 소스 코드의 품질을 검증하는 차원에서 사용
+- *자료 흐름이나 논리 흐름을 분석* 하여 비정상적인 패턴 감지
+- 동적 분석 도구로는 발견하기 어려운 결함을 찾아내고, 소스 코드에서 **코딩의 복잡도, 모델 의존성, 불일치성** 등을 분석 가능
+- 종류: `pmd`, `cppcheck`, `sonarCube`, `checkstyle`, `ccm`, `cobertura`
