--- a/오답노트/2020-1.md
+++ b/오답노트/2020-1.md
@@ -455,3 +455,61 @@ DDL은 스키마, 도메인, 테이블, 뷰, 인덱스를 정의하거나 변경
 5. `외래키(Foreign Key)`
 - 다른 릴레이션의 기본키를 참조하는 속성 또는 속성들의 집합을 의미함.
 - 한 릴레이션에 속한 속성 A와 참조 릴레이션의 기본키인 B가 동일한 도메인 상에서 정의되었을 때의 속성 A를 외래키라고 함. 
+
+## 44. 정규화 과정
+1. `비정규 릴레이션 -> 1NF`: 모든 도메인이 원자값이어야 함
+2. `1NF -> 2NF`: 부분적 함수 종속을 제거
+3. `2NF -> 3NF`: 이행적 함수 종속 제거
+4. `3NF -> BCNF`: 결정자이면서 후보키가 아닌 것 제거
+5. `BCNF -> 4NF`: 다치 종속 제거
+6. `4NF -> 5NF`:  조인 종속성 이용
+
+## 45. 무결성(Intergraty)
+무결성이란 데이터베이스에 저장된 데이터 값과 그것이 표현하는 현실 세계의 실제값이 일치하는 정확성을 의미한다.
+
+- `개체 무결성(Entity Integrity)`: 기본 테이블의 *기본키*를 구성하는 어떤 속성도 *null값이나 중복값을 가질 수 없음*
+- `도메인 무결성(Domain Integrity)`: 주어진 속성 값이 정의된 도메인에 속한 값이어야 한다는 규정
+- `참조 무결성(Referential Integrity)`: 외래키 값은 Null 이거나 참조 릴레이션의 기본키 값과 동일해야 한다. 즉 릴레이션은 *참조할 수 없는 외래키 값을 가질 수 없다*는 규정
+- `사용자 행위 무결성(User-Defined Integrity)`: 속성 값들이 사용자가 정의한 제약조건에 만족해야 함
+
+## 46. 이행적 종속 관계
+A->B이고 B->C일 때, A->C를 만족하는 관계
+
+## 47. DML(Data Manipulation Language, 데이터 조작어)
+- DML은 데이터베이스 사용자가 응용 프로그램이나 질의어를 통하여 저장된 **데이터를 실질적으로 처리**하는 데 사용하는 언어이다.
+- 데이터베이스 사용자와 데이터베이스 관리 시스템 간의 인터페이스를 제공한다.
+1. `SELECT`: 테이블에서 조건에 맞는 튜플을 검색
+2. `INSERT`: 테이블에 새로운 튜플을 삽입함
+3. `DELETE`: 테이블에서 조건에 맞는 튜플을 삭제함
+4. `UPDATE`: 테이블에서 조건에 맞는 튜플의 내용을 변경함
+
+## 48. 트리거(Trigger)
+트리거는 데이터베이스 시스템이서 데이터의 삽입/갱신/삭제 등의 이벤트가 발생할 때마다 관련 작업이 *자동으로 수행*되는 절차형 SQL이다.
+- 트리거는 DB에 저장되며, 데이터 변경 및 무결성 유지, 로그 메세지 출력 등의 목적으로 사용함
+- 트리거의 구문에는 *DCL(데이터 제어어)*을 사용할 수 없으며, DCL이 포함된 프로시저나 함수를 호출하는 경우에도 오류가 발생한다.
+- 트리거에 오류가 있는 경우 *트리거가 처리하는 데이터에도 영향*을 미치므로 생성 시 주의가 필요함
+
+## 49. 논리적 설게
+현실 세계에서 발생하는 자료를 컴퓨터가 이해하고 처리할 수 있는 물리적 저장장치에 저장할 수 있도록 변환하기 위해 특정 DBMS가 지원하는 *논리적 자료 궂로 변환(Mapping)*하는 과정이다.
+
+- 개념 세계의 데이터를 필드로 구성된 데이터 타입과 이 데이터 타입들 간의 관계로 표현되는 논리적 구조의 데이터로 모델화한다.
+- 개념적 설계가 개념 스키마를 설계하는 단계라면 논리적 설계에서는 *개념 스키마를 평가 및 정제*하고 DBMS에 따라 서로 다른 *논리적 스키마를 설계*한다.
+- *트랜잭션의 인터페이스를 설계*한다.
+- 관계형 데이터베이스라면 *테이블을 설계*하는 단계이다.
+
+## 50. E-R 모델의 표현 방법
+- 개념적 데이터 모델의 가장 대표적인 것으로, 1976년 피터 챈에 의해 제안되고 기본적인 구성 요소가 정립되었다.
+- **개체 타입(Entity Type)**과 이들 간의 **관계 타입(RelationShip Type)**을 이용해 현실 세계를 개념적으로 표현
+- 데이터를 *개체(Entity), 관계(Relationship), 속성(Attribute)* 으로 묘사함.
+- 특정 DBMS를 고려하지는 않음
+- 1:1, 1:N, N:M 등의 관계 유형을 제한 없이 나타낼 수 있음
+
+### 다이어그램의 종류
+- `사각형`: 개체(Entity)
+- `마름모`: 관계(Relationship)
+- `타원`: 속성(Attribute)
+- `이중 타원`: 다중값 속성(복합 속성)
+- `밑줄 타원`: 기본키 속성
+- `복수 타원`: 복합 속성(ex: 성명은 성과 이름으로 구성)
+- `관계`: 1:1, 1:N, N:M 등의 개체 간 관계에 대한 대응수를 선 위에 기술함
+- `선, 링크`: 개체 타입과 속성을 연결
