--- a/오답노트/2020-1.md
+++ b/오답노트/2020-1.md
@@ -513,3 +513,24 @@ A->B이고 B->C일 때, A->C를 만족하는 관계
 - `복수 타원`: 복합 속성(ex: 성명은 성과 이름으로 구성)
 - `관계`: 1:1, 1:N, N:M 등의 개체 간 관계에 대한 대응수를 선 위에 기술함
 - `선, 링크`: 개체 타입과 속성을 연결
+
+## 51. 로킹 단위(Locking Granularity)
+- 병행제어에서 한꺼번에 로킹할 수 있는 객체의 크기
+- 데이터베이스, 파일, 레코드, 필드 등이 로킹 단위가 될 수 있음
+- 로킹 단위가 크면 로크 수가 작아 관리하기 쉽지만 병행성 수준이 낮아지고,
+- 로킹 단위가 작으면 로크 수가 많아 관리하기 복잡해 *오버헤드가 증가*하지만 *병행성 수준이 높아진다*.
+
+## 52. 뷰(View)
+사용자에게 접근이 허용된 자료만을 제한적으로 보여주기 위해 하나 이상의 기본 테이블로부터 유도된, 이름을 가지는 **가상 테이블**
+- 저장장치 내에 *물리적으로 존재하지 않음*, 사용자에게는 있는 것으로 간주
+- 데이터 보정 작업, 처리 과정 시험 등 임시적인 작업을 위한 용도로 활용됨
+
+### 뷰의 특징
+- 기본 테이블과 같은 형태의 구조 사용, 조작도 기본 테이블과 거의 같음
+- 가상 테이블이기 때문에 물리적으로 구현되어 있지 않음
+- 데이터의 *논리적 데이터 제공*
+- 필요한 데이터만 뷰로 모아 처리할 수 있기 때문에 관리가 용이하고 명령문이 간단해짐
+- 뷰를 통해서만 데이터에 접근하게 하면 뷰에 나타나지 않는 데이터를 안전하게 보호하는 효율적 기법으로 사용할 수 있다.
+- **기본 테이블의 기본키를 포함한 속성(열) 집합으로 뷰를 구성해야만 삽입, 삭제, 갱신 연산이 가능하다.**
+- 일단 정의된 뷰는 다른 뷰의 정의에 기초가 될 수 있다.
+- 뷰를 정의할 때는 CREATE문, 제거할 때는 DROP문을 이용한다.
