docs: edit docs

--- a/오답노트/2020-1.md
+++ b/오답노트/2020-1.md
@@ -531,6 +531,52 @@ A->B이고 B->C일 때, A->C를 만족하는 관계
 - 데이터의 *논리적 데이터 제공*
 - 필요한 데이터만 뷰로 모아 처리할 수 있기 때문에 관리가 용이하고 명령문이 간단해짐
 - 뷰를 통해서만 데이터에 접근하게 하면 뷰에 나타나지 않는 데이터를 안전하게 보호하는 효율적 기법으로 사용할 수 있다.
-- **기본 테이블의 기본키를 포함한 속성(열) 집합으로 뷰를 구성해야만 삽입, 삭제, 갱신 연산이 가능하다.**
+- **기본 테이블의 기본키를 포함한 속성(열) 집합으로 뷰를 구성해야만 삽입, 삭제, 갱신 연산이 가능하다.** (연산에 제약이 따름)
 - 일단 정의된 뷰는 다른 뷰의 정의에 기초가 될 수 있다.
 - 뷰를 정의할 때는 CREATE문, 제거할 때는 DROP문을 이용한다.
+- *독립적인 인덱스를 가질 수 없다.*
+- 뷰의 *정의를 변경할 수 없다.*
+
+## 53. 관계형 데이터베이스 용어
+1. `릴레이션(Relation)`: 데이터들을 표(Table)의 형태로 나타낸 것으로 구조를 나타내는 *릴레이션 스키마*와 실제 값들인 *릴레이션 인스턴스* 로 구성
+2. `튜플(Tuple)`: 릴레이션을 구성하는 *각각의 행*, 속성의 모임, 파일 구조에서 레코드와 같은 의미. 튜플의 수를 *카디널리티(Cardinality)* 또는 기수, 대응수라고 함
+3. `속성(Attribute)`: 데이터베이스를 구성하는 *가장 작은 논리적 단위*, 파일 구조성의 데이터 항목 또는 *데이터 필드*에 해당. 개체의 특성을 기술, 속성의 수를 *디그리(Degree)* 또는 차수라고 한다.
+4. `도메인`: 하나의 애트리뷰트가 취할 수 있는 같은 타입의 *원자(Atomic) 값들의 집합*, 실제 애트리뷰트 값이 나타날 때 그 값의 합법 여부를 시스템이 검사하는 데에도 이용된다.
+> 성별 애트리뷰트의 도메인은 '남'과 '여'로, 그 외의 값은 입력할 수 없다.
+
+## 54. 관계대수
+- 관계대수는 관계형 데이터베이스에서 원하는 정보와 그 정보를 검색하기 위해서 어떻게 유도하는가를 기술하는 절차적인 언어이다.
+- 릴레이션을 처리하기 위해 연산자와 연산 규칙을 제공하는 언어로, *피연산자가 릴레이션이고, 결과도 릴레이션이다.*
+- 질의에 대한 해를 구하기 위해 수행해야 할 연산의 순서를 명시한다.
+- 관계대수에는 관계 데이터베이스에 적용하기 위해 특별히 개발한 *순수 관계 연산자*와 수학적 집합 이론에서 사용하는 *일반 집합 연산자*가 있다.
+
+### 순수 관걔 연산자
+1. `Select`
+- 릴레이션에 속하는 튜플 중에서 선택 조건을 만족하는 튜플의 부분집합을 구하여 새로운 릴레이션을 만드는 연산
+- 릴레이션의 행(가로)에 해당하는 튜플을 구하는 것이므로 **수평 연산**이라고도 함
+- *시그마(σ)*를 사용
+> σ DNO=3 (EMPLOYEE) : EMPLOYEE 테이블에서 DNO가 3인 행을 도출
+
+2. `Project`
+- 주어진 릴레이션에서 **속성 리스트에 제시된 속성 값만을 추춘** 하여 새로운 릴레이션을 만드는 연산이다. 단, 연산 결과에 **중복이 발생하면 중복이 제거됨**
+- *파이(π)* 를 사용
+> Π TITLE(EMPLOYEE) : EMPLOYEE 테이블에서 TITLE 열을 도출
+
+3. `Join`
+- 공통 속성을 중심으로 두 개의 릴레이션을 하나로 합쳐서 새로운 릴레이션을 만드는 연산
+- *▷◁*를 사용
+
+4. `Division`
+-  **X⊃Y**인 두 개의 릴레이션 R(X) 와 R(Y)가 있을 때, R의 속성이 Y의 속성값을 모두 가진 튜플에서 Y가 가진 속성을 제외한 속성만을 구하는 연산
+- *÷*를 사용
+
+### 일반 집합 연산자
+1. `합집합(UNION)`
+- 두 릴레이션에 존재하는 튜플의 합집합을 구하되, 결과로 생성된 릴레이션에서 **중복되는 튜플은 제거**
+- 합집합의 카디널리티는 두 릴레이션 카디널리티(튜플의 수)의 합보다 크지 않음
+- *∪*를 사용
+
+2. `교집합(INTERSECTION)`
+- 두 릴레이션에 존재하는 튜플의 교집합을 구하는 연산
+- 교집합의 카디널리티는 두 릴레이션 중 카디널리티가 적은 릴레이션의 카디널리티보다 크지 않음
+- *∩*를 사용
