--- a/오답노트/2020-1.md
+++ b/오답노트/2020-1.md
@@ -558,7 +558,7 @@ A->B이고 B->C일 때, A->C를 만족하는 관계
 > σ DNO=3 (EMPLOYEE) : EMPLOYEE 테이블에서 DNO가 3인 행을 도출
 
 2. `Project`
-- 주어진 릴레이션에서 **속성 리스트에 제시된 속성 값만을 추춘** 하여 새로운 릴레이션을 만드는 연산이다. 단, 연산 결과에 **중복이 발생하면 중복이 제거됨**
+- 주어진 릴레이션에서 **속성 리스트에 제시된 속성 값만을 추춘** 하여 새로운 릴레이션을 만드는 연산(**수직 연산**)이다. 단, 연산 결과에 **중복이 발생하면 중복이 제거됨**
 - *파이(π)* 를 사용
 > Π TITLE(EMPLOYEE) : EMPLOYEE 테이블에서 TITLE 열을 도출
 
@@ -580,3 +580,52 @@ A->B이고 B->C일 때, A->C를 만족하는 관계
 - 두 릴레이션에 존재하는 튜플의 교집합을 구하는 연산
 - 교집합의 카디널리티는 두 릴레이션 중 카디널리티가 적은 릴레이션의 카디널리티보다 크지 않음
 - *∩*를 사용
+
+3. `차집합(DIFFERENCE)`
+- 두 릴레이션에 존재하는 튜플의 차집합을 구하는 연산
+- 차집합의 카디널리티는 릴레이션 R의 카디널리티보다 크지 않음
+- *ㅡ* 를 사용
+
+4. `교차곱(CARTESIAN PRODUCT)`
+- 두 릴레이션에 있는 튜플들의 순서쌍을 구하는 연산
+- 교차곱의 디그리(차수, 속성)는 *두 릴레이션의 디그리를 더한 것과 같고*, 카디널리티(튜플의 수)는 *두 릴레이션의 카디널리티를 곱한 것과 같음*
+- *X* 를 사용
+
+## 55. 분산 데이터베이스의 목표
+1. `위치 투명성(Location Transparency)`: 액세스하려는 데이터베이스의 **실제 위치를 알 필요 없이** 단지 데이터베이스의 논리적인 명칭만으로 액세스 할 수 있음
+
+2. `중복 투명성(Replication Transparency)`: 동일 데이터가 여러 곳에 중복되어 있더라도 사용자는 마치 하나의 데이터만 존재하는 것처럼 사용하고, 시스템은 자동으로 여러 자료에 대한 작업을 수행함
+
+3. `병행 투명성(Concurrency Transparency)`: 분산 데이터베이스와 관련된 **다수의 트랜잭션들이 동시에 실행**되더라도 그 트랜잭션의 결과는 **영향을 받지 않는다.**
+
+4. `장애 투명성(Failure Transparency)`: 트랜잭션, DBMS, 네트워크, 컴퓨터 **장애에도 불구하고 트랜잭션을 정확하게 처리함**
+
+## 56. 후보키(Candidate Key)
+- 릴레이션을 구성하는 속성들 중에서 튜플을 유일하게 식별하기 위해 사용하는 속성들의 부분집합, 즉 *기본키로 사용할 수 있는 속성*들
+- 후보키는 릴레이션에 있는 모든 튜플에 대해서 *유일성*과 *희소성*을 만족시켜야 함
+
+## 58. 데이터 제어 언어(DCL)
+DCL은 데이터의 *보안, 무결성, 회복, 병행 수행 제어* 등을 정의하는 데 사용되는 언어이다.
+- 데이터베이스 관리자가 *데이터 관리*를 목적으로 사용한다.
+
+### DCL의 종류
+1. `COMMIT`: 명령에 의해 수행된 결과를 **실제 물리적 디스크로 저장**하고, 데이터베이스 조작 작업이 정상적으로 완료되었음을 관리자에게 알려줌
+2. `ROLLBACK`: 데이터베이스 조작 작업이 **비정상적으로 저장** 되었을 떄 **원래의 상태로 복구**함
+3. `GRANT`: 데이터베이스 사용자에게 **사용 권한을 부여**
+4. `REVOKE`: 데이터베이스 사용자의 **사용 권한을 취소**
+
+## 59. DROP
+DROP은 스키마, 도메인, 기본 테이블, 뷰 테이블, 인덱스, 제약 조건 등을 제거하는 명령문이다.
+```sql
+DROP SCHEMA 스키마명 [CASCADE | RESTRICT];
+DROP DOMAIN 도메인명 [CASCADE | RESTRICT];
+DROP TABLE 테이블명 [CASCADE | RESTRICT];
+DROP VIEW 뷰명 [CASCADE | RESTRICT];
+DROP INDEX 인덱스명 [CASCADE | RESTRICT];
+DROP CONSTRAINT 제약조건명;
+
+DROP TABLE 학생 CASCADE; /*학생 테이블을 제거하며, 학생 테이블을 참조하는 모든 데이터를 함께 제거*/
+```
+- `CASCADE`: 제거할 요소를 *참조하는 다른 모든 개체를 함께 제거*함. 즉 주 테이블의 데이터 제거 시 각 외래키와 관계를 맺고 있는 모든 데이터를 제거하는 **참조 무결성 제약 조건**을 설정하기 위해 사용됨
+
+- `RESTRICT`: 다른 개체가 제거할 요소를 참조할 때는 *제거를 취소*함
