--- a/오답노트/2020-1.md
+++ b/오답노트/2020-1.md
@@ -977,3 +977,53 @@ CMMI(능력 성숙도 통합 모델)는 *소프트웨어 개발 조직의 업무
 5. `최적화(Optimizing)`
 - 프로세스: *지속적 개선* 프로세스
 - 특징: 프로세스 역량 향상을 위해 지속적인 프로세스 개선
+
+## 85. 네트워크 관련 신기술
+1. `IoT(Internet if Things, 사물 인터넷)`
+- 정보 통신 기술을 기반으로 *실세계와 가상 세계의 다양한 사물들을 인터넷으로 서로 연결*하여 진보된 서비스를 제공하기 위한 서비스 기반 기술
+
+2. `메시 네트워크(Mesh Network)`
+- 차세대 이동통신, 홈네트워킹, 공공 안전 등 특수한 목적을 위한 새로운 방식의 네트워크 기술로, *대규모 디바이스의 네트워크 생성에 최적화*
+
+3. `피코넷(PICONET)`
+- *여러 개의 톡립된 통신장치*가 *블루투스 기술이나 UMB 통신기술*을 사용하여 통신망을 형성하는 무선 네트워크 기술
+
+4. `파장 분할 다중화(WDM, Wavelength Division Multiplexing)`
+- 광섬유를 이용한 통신 기술의 ㅎ나로, *파장이 다른 복수의 신호*를 보냄으로써 *여러 대의 단말기가 동시에 통신 회선을 사용*할 수 있도록 하는 것
+- *파장이 다른 광선끼리는 서로 간섭을 일으키지 않는 성질*을 이용한 기술
+
+5. `클라우드 기반 HSM(Cloud-Based Hardware Security Module)`
+- 클라우드를 기반으로 *암호화 키의 생성/저장/처리* 등의 작업을 수행하는 보안기기
+- 클라우드에 인증서를 저장하므로 스마트폰과 같은 개별 기기에 인증서를 저장할 필요가 없음
+- 암호화 키 생성이 하드웨어적으로 구현되기 떄문에 소프트웨어적으로 구현된 암호 기술이 가지는 보안 취약점을 무시할 수 있음
+
+6. `파스-타(PaaS-TA)`
+- 소프트웨어 개발 환경 제공을 위해 개발한 *개방형 클라우드 컴퓨팅 플랫폼*
+- 국내 IT 서비스 경쟁력 강화를 목표로 과학기술정보통신부와 한국정보화진흥원이 연구개발(R&D)를 지원하였으며, **인프라 제어 및 관리 환경, 개발 환경, 실행 환경, 서비스 환경, 운영 환경으로 구성**되어 있음
+
+7. `징(Zing)`
+- *10cm* 이내 거리에서 *3.5Gbps* 속도의 데이터 전송이 가능한 초고속 근접무선통신(NFC)
+- 휴대용 스마트 기기, 노트북, 쇼핑몰/거리 등의 광고나 키오스크에 접목하여 사용할 수 있음
+
+8. `SSO(Single Sign On)`
+- *한 번의 로그인*으로 개인이 가입한 모든 사이트를 이용할 수 있게 해주는 시스템
+- 개인정보를 각 사이트마다 일일이 기록해야 하던 불편함을 해소할 수 있음
+- 기업에서는 회원에 관한 통합관리가 가능해 마케팅을 극대화시킬 수 있음
+
+9. `스마트 그리드(Smart Grid)`
+- 정보 기술을 *전력에 접목*해 효율성을 높인 시스템으로, **전력 IT**라고도 부름
+- *전력선을 기반*으로 모든 통신, 정보, 관련 애플리케이션 *인프라를 하나의 시스템으로 통합*하여 효율적인 에너지 관리가 가능
+
+## 86. COCOMO Model 소프트웨어 개발 유형
+1. `조직형(Organic Mode)`
+- 기관 내부에서 개발된 *중/소규모*의 소프트웨어로 일괄 자료 처리나 과학 기술 계산용, 비즈니스 자료 처리용으로 *5만(50KDS)* 라인 이하의 소프트웨어를 개발하는 유형
+- **사무 처리용, 업무용, 과학용 응용 소프트웨어 개발**에 적합
+
+2. `반분리형(Semi-Detached Mode)`
+- 조직형과 내장형의 중간형으로 **트랜잭션 처리 시스템**이나 **운영체제, 데이터베이스 관리 시스템** 등의 *30만(300KDS) 라인 이하*의 소프트웨어를 개발하는 유형
+- **컴파일러, 인터프리터**와 같은 유틸리티 개발에 적합
+
+3. `내장형(Embeded Mode)`
+- *초대형 규모*의 트랜잭션 처리 시스템이나 운영체제 등의 *30만(300KDS) 라인 이상*의 소프트웨어를 개발하는 유형
+0 **신호기 제어 시스템, 미사일 유도 시스템, 실시간 처리 시스템** 등의 시스템 프로그램 개발에 적합함
+
