docs: edit docs

--- a/오답노트/2020-1.md
+++ b/오답노트/2020-1.md
@@ -1015,6 +1015,8 @@ CMMI(능력 성숙도 통합 모델)는 *소프트웨어 개발 조직의 업무
 - *전력선을 기반*으로 모든 통신, 정보, 관련 애플리케이션 *인프라를 하나의 시스템으로 통합*하여 효율적인 에너지 관리가 가능
 
 ## 86. COCOMO Model 소프트웨어 개발 유형
+*보헴*이 제안한 것으로, 원시 프로그램의 규모인 *LOC*에 의한 비용 산정 기법
+
 1. `조직형(Organic Mode)`
 - 기관 내부에서 개발된 *중/소규모*의 소프트웨어로 일괄 자료 처리나 과학 기술 계산용, 비즈니스 자료 처리용으로 *5만(50KDS)* 라인 이하의 소프트웨어를 개발하는 유형
 - **사무 처리용, 업무용, 과학용 응용 소프트웨어 개발**에 적합
@@ -1027,3 +1029,61 @@ CMMI(능력 성숙도 통합 모델)는 *소프트웨어 개발 조직의 업무
 - *초대형 규모*의 트랜잭션 처리 시스템이나 운영체제 등의 *30만(300KDS) 라인 이상*의 소프트웨어를 개발하는 유형
 0 **신호기 제어 시스템, 미사일 유도 시스템, 실시간 처리 시스템** 등의 시스템 프로그램 개발에 적합함
 
+## 87. 정보 보안 침해 공격 관련 용어
+1. `웜(Worm)`
+*네트워크를 통해 연속적으로 자신을 복제*하여 *시*스템의 부하를 높임*으로써 결국 시스템을 다운시키는 바이러스의 일종으로, **분산 서비스 거부 공격, 버퍼 오버플로 공격, 슬래머** 등이 웜의 한 형태
+
+2. `제로 데이 공격(Zero Day Attack)`
+보안 취약점이 발견되었을 때 발견된 취약점의 존재가 널리 *공표되기도 전에 해당 취약점을 총해 이루어지는 보안 공격*으로, **공격의 신속성**을 의미함
+
+3. `키로거 공격(Key Logger Attack)`
+컴퓨터 사용자의 *키보드 움직임을 탐지*해 ID, 패스워드, 계좌번호, 카드번호 등과 같은 중요 개인정보를 몰래 뺴가는 해킹 공격
+
+4. `랜섬웨어(Ransomware)`
+인터넷 사용자의 컴퓨터에 잠입해 내부 문서나 파일 등을 암호화해 사용자가 열지 못하게 하는 프로그램으로, 암호 해독용 프로그램의 전달을 조건으로 사용자에게 돈을 요구하기도 함
+
+5. `백도어(Back Door, Trap Door)`
+- 시스템 설계자가 서비스 기술자나 유지보수 프로그램 작성자(Programmer)의 액세스 편의를 위해 *시스템 보안을 제거하여 만든 비밀 통로*로, 컴퓨터 범죄에 악용되기도 함
+- 백도어 탐지 방법: *무결성 검사, 열린 포트 확인, 로그 분석, SetUid 파일 검사* 등
+
+## 88. LOC 산정 공식
+```
+예측치 = (낙관치 + (4 * 기대치(중간치)) + 비관치) / 6
+```
+
+- *노력(인월)* = `개발 기간 * 투입 인원`, `LOC / 1인당 월평균 생산 코드 라인 수`
+- *개발 비용* = `노력(인월) * 단위 비용(1인당 월평균 인건비)`
+- *개발 기간* = `노력(인월) / 투입 인원`
+- *생산성* = `LOC / 노력(인월)`
+
+## 89. Putnam 모형
+소프트웨어 생명 주기의 전 과정 동안에 사용될 *노력의 분포를 가정*해 주는 모델
+- 푸트남(Putnam)이 제안한 것으로 **생명 주기 예측 모형**이라고도 한다.
+- *시간*에 따른 함수로 표현되는 *Rayleigh-Norden* 곡선의 노력 분포도를 기초로 한다.
+- **대형 프로젝트의 노력 분포 산정**에 이용되는 기법
+- 개발 기간이 늘어날수록 프로젝트 적용 인원의 노력이 감소한다.
+
+## 90. 양방향 알고리즘 종류
+1. `SEED`
+- 1999년 한국인터넷진흥원(KISA)에서 개발한 *블록 암호화*(개인키 암호화) 알고리즘
+- 블록 크기는 *128*비트이며, 키 길이에 따라 128, 256으로 분류됨
+
+2. `ARIA(Academy, Research Institute, Agency)`
+- 2004년 국가정보원과 산학연합회가 개발한 *블록 암호화*(개인키 암호화) 알고리즘
+- ARIA는 학계, 연구기관, 정부의 영문 앞 글자로 구성됨
+- 블록 크기는 *128*비트이먀. 키 길이에 따라 128, **192**, 256으로 분류됨
+
+3. `DES(Data Encryption Standard)`
+- 1975년 미국 NBS에서 발표한 *개인키 암호화* 알고리즘
+- DES를 3번 적용하여 보안을 더욱 강조한 3DES(Triple DES)도 있음
+- 블록 크기는 *64*바이트이며, 키 길이는 *56비트*
+
+4. `AES(Advanced Encryption Standard)`
+- 2001년 미국 표준 기술 연구소(NST)에서 발표한 *개인키* 암호화 알고리즘
+- DES의 한계를 노린 NST에서 공모한 후 발표하였다.
+- 블록 크기는 *128*비트이며, 키 길이에 따라 **128, 192, 256**으로 분류됨
+
+5. `RSA(Rivest Shamir Adleman)`
+- 1978년 MIT의 라이베스트, 샤미르, 애들먼에 의해 제안된 *공개키*암호화 알고리즘
+- **큰 숫자를 소인수분해하기 어렵다는 것에 기반**하여 만들어짐
+- *공개키와 비밀키를* 사용하는데, 여기서 키란 메시지를 열고 잠그는 상수(Constant)를 의미함
