docs: edit docs

--- a/오답노트/2020-1.md
+++ b/오답노트/2020-1.md
@@ -1087,3 +1087,49 @@ CMMI(능력 성숙도 통합 모델)는 *소프트웨어 개발 조직의 업무
 - 1978년 MIT의 라이베스트, 샤미르, 애들먼에 의해 제안된 *공개키*암호화 알고리즘
 - **큰 숫자를 소인수분해하기 어렵다는 것에 기반**하여 만들어짐
 - *공개키와 비밀키를* 사용하는데, 여기서 키란 메시지를 열고 잠그는 상수(Constant)를 의미함
+
+## 91. 나선형(Spiral) 모델
+- 폭포수 모델과 프로토타입 모델의 장점에 *위험 분석기능*을 더함
+- 나선을 돌듯 여러 번의 지속적인 개발 과정을 통해 **점진적으로 개발**하는 것
+- 개발 중 *발생할 수 있는 위험을 최소화*하는 것이 목적이며 *유지보수가 필요없다*.
+- *누락 및 추가된 요구사항 반영이 가능*하다.
+- `계획 및 목표 설정 > 위험 분석 > 공학적 개발 및 검증 > 고객 평가`
+- *반복적인 개발 사이클*을 통해 완성도가 점점 올라가며, 개발 단계에선 **목표 시스템에 맞춰**(공학적) 폭포수, 프로토타입 등 **다양한 모델을 적용**할 수 있다.
+
+## 93. 백도어 탐지 방법
+`무결성 검사, 열린 포트 확인, 로그 분석, SetUID 파일 검사`
+
+## 94. 버퍼 오버플로 공격 대응방안
+- `버퍼 오버플로우`: 연속된 메모리 공간을 사용하는 프로그램에서 *할당된 메모리의 범위를 넘어선 위치에서 자료를 읽거나 쓰려고 할 때 발생*하는 보안약점
+- 프로그램의 오동작 유발, 악의적인 코드를 실행시켜 공격자가 프로그램을 통제할 수 있는 권한을 획득하게 함
+- 메모리 버퍼를 사용하는 경우 적절한 버퍼의 크기를 설정하고, 설정된 범위의 메모리 내에서 올바르게 읽거나 쓸 수 있도록 함으로써 방지할 수 있음
+
+1. 운영체제의 주기적 최신 패치 적용
+2. 입력값 검증이 가능한 안전한 함수 사용(`Strncpy()`) 등
+3. `스택가드(Stackguard)`: *카나리(Canary)*라고 불리는 무결성 체크용 값을 복귀주소와 변수 사이에 삽입해 두고, 버퍼 오버플로우 시 카나리 값이 변하게 되면 복귀주소를 호출하지 않는 방법
+4. `스택쉴드(Stack Shield)`: 함수 시작 시 복귀주소를 *Global RET* 라는 특수 스택에 저장해 두고 함수 종료 시 저장된 값과 스택의 RET 값을 비교해서 다를 경우 오버플로우로 간주하고 프로그램 실행을 중단하는 방법
+5. `ASLR(Address Space Layout Randomization)`: 메모리 공격을 방어하기 위해 주소 공간 배치를 *난수화*하고, *실행 시마다 메모리 주소를 변경*시켜 버퍼 오버플로우를 통한 특정 주소 호출을 차단
+
+## 95. 소프트웨어 개발 프레임워크 적용 기대효과
+- 디자인 패턴에 모듈의 장점 및 기능을 결합하여 실제적인 개발의 틀(frame)을 제공한다.
+- 프레임워크가 프로그램의 기본 틀을 제공하고, 개발자가 기능을 구체화하는 **제어의 역 흐름**이 발생한다.
+- 프로그램의 기반, 구조를 잡아주는 코드의 모임이며 자연스럽게 **특정 디자인 패턴을 유도**한다.
+- 이미 검증된 프레임워크를 사용함으로써 *품질, 예산, 유지보수*에 이점이 있다
+
+## 96. 보안 요소
+1. `기밀성`
+- 시스템 내의 정보와 자원은 *인가된 사용자에게만 접근이 허용됨*
+- 정보가 전송 중에 노출되더라도 *데이터를 읽을 수 없음*
+
+2. `무결성`
+- 시스템 내의 정보는 오직 *인가된 사용자만 수정*
+
+3. `기밀성`
+- 인가받은 사용자는 언제라도 사용할 수 있음
+
+4. `인증`
+- 시스템 내의 정보와 자원을 사용하려는 사용자가 합법적인 사용자인지를 확인하는 모든 행위
+- 대표적 방법으로는 패스워드, 인증용 카드, 지문 검사 등이 있음
+
+5. `부인 방지`
+- 데이터를 송/수신한 자가 송/수신을 부인할 수 있도록 송/수신 증거를 제공함
