--- a/오답노트/2020-1.md
+++ b/오답노트/2020-1.md
@@ -1121,7 +1121,7 @@ CMMI(능력 성숙도 통합 모델)는 *소프트웨어 개발 조직의 업무
 - 시스템 내의 정보와 자원은 *인가된 사용자에게만 접근이 허용됨*
 - 정보가 전송 중에 노출되더라도 *데이터를 읽을 수 없음*
 
-2. `무결성`
+2. `무결성`ㄴ 
 - 시스템 내의 정보는 오직 *인가된 사용자만 수정*
 
 3. `기밀성`
@@ -1133,3 +1133,49 @@ CMMI(능력 성숙도 통합 모델)는 *소프트웨어 개발 조직의 업무
 
 5. `부인 방지`
 - 데이터를 송/수신한 자가 송/수신을 부인할 수 있도록 송/수신 증거를 제공함
+
+##  97. DB 관련 신기술
+1. `하둡(Hadoop)`
+- *오픈 소스*를 기반으로 한 *분산 컴퓨팅 플랫폼*
+- *일반 PC급 컴퓨터*로 *가상화된 대형 스토리지* 를 형성하고 그 안에 보관된 거대한 데이터 세트를 *병렬로 처리*할 수 있도록 개발된 *자바 소프트웨어 프레임워크*로, 구글, 야후 등에 적용되고 있음
+
+2. `맵리듀스(MapReduce)`
+- *대용량 데이터를 분산 처리*하기 위한 목적으로 개발된 프로그래밍 모델로, 흩어져 있는 데이터를 *연관성 있는 데이터 분류로 묶는 Map* 작업을 수행한 후 *중복 데이터를 제거하고 원하는 데이터를 추출하는 Reduce 작업*을 수행함
+
+3. `타조(Tajo)`
+- 오픈 소스 기반 분산 컴퓨팅 플랫폼인 아파치 하둡(Apache Hadoop)기반의 분산 데이터 웨어하우스 프로젝트로, 우리나라가 주도하여 개발하고 있음
+
+4. `데이터 마이닝(Data Mining)`
+- 데이터 웨어하우스에 저장된 데이터 집합에서 사용자의 요구에 따라 유용하고 가능성 있는 정보를 발견하기 위한 기법
+- *대량의 데이터를 분석*하여 데이터 속에 내재되어 있는 *변수 사이의 상호관계를 규명*하여 패턴화함으로써 효율적인 데이터 추출이 가능함
+
+5. `OLAP(Online Analytical Processing)`
+- 다차원으로 이루어진 데이터로부터 *통계적인 요약 정보를 분석*하여 의사결정에 활용하는 방식을 말함
+- `OLAP 연산`: Roll-up, Drill-down, Drill-through, Drill-across, Pivoting, Slicing, Dicing
+
+## 98. 데이터 무결성 검사 도구
+- 데이터 무결성 검사 도구는 *시스템 파일의 변경 유무를 확인*하고 파일이 변경되었을 경우 이를 관리자에게 알려주는 도구로, 인터페이스 보안 취약점을 분석하는 데 사용된다.
+- 크래커나 허가받지 않은 내부 사용자들이 시스템에 침입하면 백도어를 만들어 놓거나 시스템 파일을 변경하여 자신의 흔적을 감추는데, 무결성 검사 도구를 이용하여 이를 감지할 수 있다.
+- *해시 함수*를 이용하여 현재 파일 및 디렉토리의 상태를 DB에 저장한 후 감시하다가 현재 상태와 DB의 상태가 달라지면 관리자에게 변경 사실을 알려준다.
+- 대표적인 무결성 검사 도구에는 *Tripwire*,  *AIDE*, *Samhain*, *Claymore*, *Slipwire*, *Fcheck* 등이 있다.
+
+## 99. 폭포수 모델
+- 과거에 가장 폭넓게 사용되던 방식
+- 정해진 단계를 *한 번씩만 진행*하며 *이전 단계로 돌아갈 수 없다.*
+- 단계별로 결과물이 명확하게 산출되어야 다음 단계로 넘어가는 방식
+- 제품의 *기능 보완이 불가능*하므로 메뉴얼 작성이 필수적
+> 계획 -> 요구분석 -> 설계 -> 구현 -> 테스트 -> 유지보수
+
+## 100. 소프트웨어 개발 방법론 테일러링
+- 소프트웨어 개발 방법론 테일러링은 프로젝트 상황 및 특성에 맞도록 정의된 *소프트웨어 개발 방법론의 절차, 사용기법 등을 수정 및 보완*하는 작업이다.
+- 소프트웨어 개발 방법론 테일러링 작업 시 고려해야 할 사항에는 내부적 기준과 외부적 기준이 있다.
+
+### 내부적 기준
+- `목표 환경`: 시스템의 개발 환경과 유형이 서로 다른 경우
+- `요구사항`: 프로젝트의 생명 주기 활동에서 개발, 운영, 유지보수 등 프로젝트에서 우선적으로 고려할 요구사항이 다른 경우
+- `프로젝트 규모`: 비용, 인력, 기간 등 프로젝트의 규모가 서로 다른 경우
+- `보유 기술`: 프로세스, 개발 방법론, 산출물, 구성원의 능력 등이 서로 다른 경우
+
+### 외부적 기준
+- `법적 제약사항`: 프로젝트별로 적용될 IT Complicance(관련 법률)이 다른 경우
+- `표준 품질 기준`: 금융, 제도 등 분야별 표준 품질 기준이 서로 다른 경우
