docs: edit docs

--- a/오답노트/2020-3.md
+++ b/오답노트/2020-3.md
@@ -50,3 +50,66 @@
 
 ### 8. 행위적 패턴의 종류
 - 책임 연쇄(Chain of Responsibility), 커맨드(Command), 인터프리터(interpreter), 반복자(Iterator), 중재자(Mediator), 메멘토(Memento), 옵서버(Observer), 상태(State), 전략(Strategy), 템플릿 메소드(Template Method), 방문자(Visitor)
+
+### 9. UI 설계 원칙
+- **직관성**: 누구나 쉽게 이해하고 사용할 수 있어야 한다.
+- **유효성**: 사용자의 목적을 정확하고 완벽하게 달성해야 한다.
+- **학습성**: 누구나 쉽게 배우고 익힐 수 있어야 한다.
+- **유효성**: 사용자의 요구사항을 최대한 수용하고 실수를 최소화해야 한다.
+
+### 10. 코드의 기능
+1. `식별 기능`: 데이터 간의 성격에 따라 구분이 가능함
+2. `분류 기능`: 특정 기준이나 동일한 유형에 해당하는 데이터를 그룹화할 수 있음
+3. `배열 기능`: 다양한 데이터를 기준에 맞추어 표현할 수 있음
+4. `간소화 기능`: 복잡한 데이터를 간소화할 수 있음
+
+### 11. 협약(Contract)에 의한 설계
+컴포넌트를 설계할 때 <u>*클래스에 대한 여러 가정을 공유할 수 있도록 명세*</u>한 것으로, 소프트웨어 컴포넌트에 대한 정확한 인터페이스를 명세한다. <br />
+협약에 의한 설계 시 명세에 포함될 조건에는 **선행 조건, 결과 조건, 불변 조건**이 있다.
+
+- `선행 조건`: 오퍼레이션이 호출되기 전에 참이 되어야 할 조건
+- `결과 조견`: 오퍼레이션이 수행된 후 만족되어야 할 조건
+- `불변 조건`: 오퍼레이션이 실행되는 동안 항상 만족되어야 할 조건
+
+### 12. UML 다이어그램의 종류
+#### 구조적 다이어그램의 종류
+- **정적 모델링**
+- 클래스 다이어그램, 객체 다이어그램, 컴포넌트 다이어그램, <u>*배치 다이어그램*</u>, 복합체 다이어그램, 패키지 다이어그램
+
+#### 행위 다이어그램의 종류
+- **동적 모델링**
+- 유스케이스 다이어그램, <u>*순차 다이어그램*</u>, 커뮤니케이션 다이어그램, 상태 다이어그램, 활동 다이어그램, 상호작용 개요 다이어그램, 타이밍 다이어그램
+
+
+### 13. 클래스
+클래스는 **공통된 속성과 연성(행위)을 갖는 객체의 집합**으로, 객체의 **일반적인 타입**을 의미함
+- 각각의 객체들이 갖는 속성과 연산을 정의하고 있는 틀이다.
+- 객체지향 프로그램에서 데이터를 추상화하는 단위이다.
+- *<u>클래스에 속한 각각의 객체</u>*를 **인스턴스**라 하며, 클래스로부터 새로운 객체를 생성하는 것을 인스턴스화 라고 한다.
+
+### 14. UML 모델의 관계
+1. **연관(Association)관계**
+- 2개 이상의 사물이 서로 관련되어 있음을 표현한다.
+- `ㅡ>`
+
+2. **집합(Aggregation)관계**
+- 하나의 사물이 다른 사물에 포함되어 있는 관계를 표현한다.
+- `-◇`
+
+3. **포함(Composition)관계**
+- 집합 관계의 특수한 형태로, *<u>포함하는 사물의 변화가 포함되는 사물에게 영향</u>*을 미치는 관계를 표현한다.
+- `-◆`
+
+4. **일반화(Generalization)관계**
+- 일반화 관계는 **하나의 사물이 다른 사물에 비해 더 일반적인지 구체적인지를 표현**한다.
+- 하위 클래스들의 공통점을 상위 클래스에서 가지고, 하위 클래스는 상위 클래스의 공통점을 상속 받는 관계
+- `-▷`
+
+5. **의존(Dependency)관계**
+- 의존 관계는 연관 관계와 같이 사물 사이에 서로 연관은 있으나 *<u>필요에 의해 서로에게 영향을 주는 짧은 시간 동안만 연관을 유지하는 관계</u>*를 표현한다.
+- 일반적으로 한 클래스가 **다른 클래스를 오퍼레이션의 매개 변수로 사용**하는 경우에 나타나는 관계이다.
+- `- - - >`
+
+6. **실체화(Realization)**관계
+- 실체화 관계는 사물이 *<u>할 수 있거나 해야 하는 기능(행위, 인터페이스)으로 서로를 그룹화</u>*할 수 있는 관계를 표현한다.
+- `- - - -▷`
