docs: edit docs

--- a/오답노트/2020-3.md
+++ b/오답노트/2020-3.md
@@ -113,3 +113,36 @@
 6. **실체화(Realization)**관계
 - 실체화 관계는 사물이 *<u>할 수 있거나 해야 하는 기능(행위, 인터페이스)으로 서로를 그룹화</u>*할 수 있는 관계를 표현한다.
 - `- - - -▷`
+
+### 15. 디자인 패턴을 구성하는 요소
+- 문제 및 배경, 실제 적용된 사례, 재사용이 가능한 샘플 코드
+
+### 16. 자료 사전
+- `=`: 자료의 정의, ~로 구성되어 있다(is composed of)
+- `+`: 자료의 연결, 그리고(and)
+- `()`: 자료의 생략, 생략 가능한 자료(Optional)
+- `[]`: 자료의 선택, 또는(or)
+- `{}`: 자료의 반복(Iteration of)
+- `* *`: 자료의 설명(주석)
+> {}n: n번 이상 반복, {}nm: m 이상 n 이하로 반복
+
+### 17. 객체지향 설계 원칙
+객체지향 설계 원칙은 시스템 변경이나 확장에 유연한 시스템을 설계하기 위해 지켜야 할 다섯 가지 원칙으로, 다섯 가지 원칙의 앞글자를 따 **SOLID 원칙** 이라고도 불린다.
+
+
+#### 1. 단일 책임 원칙(SRP, Single Responsibility Principle)
+- 객체는 *<u>단 하나의 책임만</u>* 가져야 한다는 원칙
+- 클래스는 그 책임을 완전히 캡슐화해야 함
+
+#### 2. 개방-폐쇄 원칙(OOP, Open-Cloded Principle)
+-  *<u>기존의 코드를 변경하지 않고 기능을 추가할 수 있도록 설계</u>*해야 한다는 원칙
+
+#### 3. 리스코프 치환 원칙(Liskov Substitution Principle)
+- 자식 클래스는 최소한 자신의 부모 클래스에서 가능한 행위는 수행할 수 있어야 한다는 설계 원칙
+- 서브 타입(상속받은 하위 타입)은 *<u>어디에서나 자신의 기반 타입(상위 클래스) 로 교체할 수 있어야 함</u>*
+
+### 4. 인터페이스 분리 원칙(Interface Segregation Principle)
+- 자신이 사용하지 않는 인터페이스와 *<u>의존 관계를 맺거나 영향을 받지 않아야 한다</u>*는 원착
+
+### 5. 의존 역전 원칙(Dependency Inversion Principle)
+- 각 객체들 간의 의존관계가 성립될 때, *<u>추상성이 낮은 클래스보다 추상성이 높은 클래스와 의존 관계</u>*를 맺어야 한다는 원칙
