docs: edit docs

--- a/오답노트/2020-3.md
+++ b/오답노트/2020-3.md
@@ -142,7 +142,47 @@
 - 서브 타입(상속받은 하위 타입)은 *<u>어디에서나 자신의 기반 타입(상위 클래스) 로 교체할 수 있어야 함</u>*
 
 ### 4. 인터페이스 분리 원칙(Interface Segregation Principle)
-- 자신이 사용하지 않는 인터페이스와 *<u>의존 관계를 맺거나 영향을 받지 않아야 한다</u>*는 원착
+- 자신이 사용하지 않는 인터페이스와 *<u>의존 관계를 맺거나 영향을 받지 않아야 한다</u>*는 원칙
 
 ### 5. 의존 역전 원칙(Dependency Inversion Principle)
 - 각 객체들 간의 의존관계가 성립될 때, *<u>추상성이 낮은 클래스보다 추상성이 높은 클래스와 의존 관계</u>*를 맺어야 한다는 원칙
+- 상위 계층이 하위 계층의 구현으로부터 독립
+
+### 18. 자료 흐름도(Data Flow Diagram)의 구성 요소
+- **프로세스(Process), 자료 저장소(Data Store), 자료 흐름(Flow), 단말(Terminator)**
+
+### 19. CASE(Computer Aided Software Engineering)
+CASE는 소프트웨어 개발 과정에서 사용되는 요구 분석, 설계, 구현, 검사 및 디버깅 과정 전체 또는 일부를 컴퓨터와 전용 소프트웨어 도구를 사용하여 자동화하는 것이다.
+- 객체지향 시스템, 구조적 시스템 등 **다양한 시스템에서 활용되는 자동화 도구(CASE Tool)**이다.
+- 소프트웨어, 하드웨어, 데이터베이스, 테스트 등을 **통합**하여 <u>소프트웨어를 개발하는 환경을 조성한다.</u>
+- 소프트웨어 생명 주기의 **전체 단계를 연결**해 주고 **자동화 해주는 통합된 도구를 제공**해주는 기술이다.
+- <u>소프트웨어 개발 도구와 방법론이 결합</u>된 것으로, **정형화된 구조 및 방법(메커니즘)을 소프트웨어 개발에 적용**하여 생산성 향상을 구현하는 공학 기법이다.
+- 소프트웨어 개발의 모든 단계에 거쳐 <u>일관된 방법론을 제공</u>하는 자동화 도구들을 지원하고, 개발자들은 이 도구를 사용하여 **소프트웨어 개발의 표준화**를 지향하며, **자동화**의 이점을 얻을 수 있다.
+- CASE의 주요 기능: <u>**소프트웨어 생명 주기 전 단계의 연결, 다양한 소프트웨어 개발 모형 지원, 그래픽 지원**</u>
+
+### 20. 요구사항 검증 방법
+#### 1. 동료검토(Peer Review)
+- 요구사항 **명세서 작성자가 내용을 직접 설명**하고 <u>동료</u>들이 이를 들으면서 결함을 발견하는 형태의 검토 방법
+
+#### 2. 워크스루(WalkThrough)
+- 검토 회의 전에 **요구사항 명세서를 미리 배포**하여 사전 검토한 후에 *<u>짧은 회의를 통해 결함을 발견</u>*
+
+#### 3. 인스펙션(Inspection)
+- *<u>요구사항 명세서 작성자를 제외</u>*한 **다른 검토 전문가**들이 요구사항 명세서를 확인하면서 결함을 발견
+
+#### 4. 프로토타이핑(Prototyping)
+- 사용자의 요구사항을 정확히 파악하기 위해 실제 개발될 소프트웨어에 대한 **견본품**을 만들어 최종 결과물을 예측함
+
+#### 5. 테스트 설계
+- 요구사항은 테스트할 수 있도록 작성되어야 하며, 이를 위해 테스트 케이스(Test case)를 생성하여 이후에 요구사항이 현실적으로 테스트 가능한지를 검토함
+
+#### 6. CASE 도구 활용
+- **일관성 분석**을 통해 요구사항 변경사항의 추적 및 분석을 관리하고 표준 준수 여부를 확인함
+
+### 21. 네트워크 인터페이스 보안 솔루션
+- IPSec, SSL, S-HTTP
+
+### 22. 소프트웨어 공학의 기본 원칙
+- 현대적인 프로그래밍 기술을 지속적으로 적용한다.
+- 소프트웨어 품질에 대해 지속적인 검증을 시행한다.
+- 소프트웨어 개발 단계별 산출물에 대한 명확한 기록을 유지한다.
