--- a/오답노트/2020-3.md
+++ b/오답노트/2020-3.md
@@ -186,3 +186,52 @@ CASE는 소프트웨어 개발 과정에서 사용되는 요구 분석, 설계, 
 - 현대적인 프로그래밍 기술을 지속적으로 적용한다.
 - 소프트웨어 품질에 대해 지속적인 검증을 시행한다.
 - 소프트웨어 개발 단계별 산출물에 대한 명확한 기록을 유지한다.
+
+### 23. 소프트웨어 품질 요구사항
+- `ISO/IEC 9126`: 소프트웨어의 **품질 특성과 평가**를 위한 표준 지침으로서 국제 표준으로 널리 사용됨
+- `ISO/IEC 25010`: 소프트웨어 **제품에 대한 국제 표준**으로, *<u>2011년에 ISO/IEC 9126을 개정하여 만들었음</u>*
+- `ISO/IEC 12119`: ISO/IEC 9126을 준수한 품질 표준으로, **테스트 절차를 포함하여 규정함**
+- `ISO/IEC 14598`: **소프트웨어 품질의 측정과 평가의 주요 절차를 규정**힌 표준으로, *<u>개발자/구매자/평가자 별로 수행해야 할 제품 평가 활동을 규정함</u>*
+
+### 24. 클린 코드 작성 원칙
+- 가독성, 단순성, 의존성 배제, 중복성 최소화, 추상화
+
+### 25. 블랙박스 테스트의 종류
+- 동치(동등)분할 검사, 경계값 분석, 원인-효과 그래프 검사, 오류 예측 검사, 비교 검사
+
+### 26. 순환복잡도(mccabe의 cyclomatic)
+순환 복잡도는 한 프로그램의 논리적인 복잡도를 측정하기 위한 소프트웨어 척도로, **맥케이브 순환도** 또는 맥케이브 복잡도 메트릭이라고도 하며, 제어 흐름도 이론에 기초를 둔다.
+- 순환 복잡도를 이용하여 계산된 값은 *<u>프로그램의 독립적인 경로의 수</u>*를 정의하고, *<u>모든 경로가 한 번 이상 수행되었음을 보장/u>*하기 위해 행해주는 테스트 횟수의 상한선을 제공한다.
+1. 순환 복잡도는 제어 흐름도의 영역 수와 일치하므로 영역 수를 계산한다.
+2. `순환 복잡도 = 화살표 수 - 노드 수 + 2`
+
+### 27. 선택 정렬(Selection Sort)
+- 선택 정렬은 첫 번째 자료를 두 번째 자료부터 마지막 자료까지 차례대로 비교하여 **가장 작은 값을 찾아 첫 번째에 놓고**, 두 번째 자료를 세 번째 자료부터 마지막 자료까지와 차례대로 비교하여 그 중 가장 작은 값을 찾아 두 번째 위치에 놓는 과정을 반복하며 정렬을 수행한다.
+
+### 28. 형상 관리 도구의 주요 기능
+- 저장소(Repository), 가져오기(import), 체크아웃(checkout), 체크인(checkin), 커밋(commit), 동기화(update)
+
+### 30. 소프트웨어 품질 목표
+#### 기능성
+- 소프트웨어가 **사용자의 요구사항을 정확하게 만족**하는 기능을 제공하는지 여부
+- 하위 특성: 적절성/적합성, 정밀성/정확성, 상호 운용성, 보안성, 준수성
+
+#### 신뢰성
+- 소프트웨어가 요구된 기능을 **정확하고 일관되게 오류 없이 수행할 수 있는 정도**
+- 하위 특성: 성숙성, 고장 허용성, 회복성
+
+#### 사용성
+- 사용자와 컴퓨터 사이에 발생하는 어떠한 행위에 대하여 **사용자가 정확하게 이해하고 사용하며, 향후 다시 사용하고 싶은 정도**
+- 하위 특성: 이해성, 학습성, 운용성, 친밀성
+
+#### 효율성
+- 사용자가 요구하는 기능을 할당된 시간 동안 **한정된 자원으로 얼마나 빨리 처리할 수 있는지** 정도
+- 하위 특성: 시간 효율성, 자원 효율성
+
+#### 유지 보수성
+- 환경의 변화 또는 새로운 요구사항 발생 시 소프트웨어를 개선하거나 확장할 수 있는 정도
+- 하위 특성: 분석성, 변경성, 안정성, 시험성
+
+#### 이식성
+- 소프트웨어가 다른 환경에서도 얼마나 쉽게 적용할 수 있는지 정도
+- 하위 특성: 적용성, 설치성, 대체성, 공존성
