docs: edit docs

--- a/오답노트/2020-3.md
+++ b/오답노트/2020-3.md
@@ -235,3 +235,48 @@ CASE는 소프트웨어 개발 과정에서 사용되는 요구 분석, 설계, 
 #### 이식성
 - 소프트웨어가 다른 환경에서도 얼마나 쉽게 적용할 수 있는지 정도
 - 하위 특성: 적용성, 설치성, 대체성, 공존성
+
+### 31. 알고리즘 설계 기법의 종류 
+#### 1. Brute Force(브루트포스)
+- *<u>모든 경우의 수를 탐색해서 정답을 도출</u>*해 내는 **완전 탐색 알고리즘**
+- 깊이 우선 탐색(DFS), 너비 우선 탐색(BFS)
+
+#### 2. Backtracking (퇴각 검색)
+- 완전 탐색 알고리즘에서 **답이 될 가능성이 없으면 탐색을 하지 않음**
+
+#### 3. Greedy(탐욕)
+- 탐색을 하는 상황에서 **상황마다 가장 좋아보이는 해결책을 선택**
+- 최소비용 신장트리(MST, Minimum Spanning Tree)
+
+#### 4. Dynamic Programming(동적 프로그래밍)
+- **Memoization** 기법(*<u>계산한 내용을 저장하여 추후 반복 계산을 막는 방식</u>*)을 사용
+- 완전탐색을 하는 경우 이중 반복을 통해 `O(N^2)`의 시간 복잡도가 소요될 때, 적절한 문제에 해당 알고리즘을 사용하면 `O(N)`으로 줄어들 수 있음
+
+#### 5. Divide and Conquer(분할 정복)
+- **큰 문제를 작은 문제로 나눠서 푸는 하향식 접근 방식**
+- 분할을 통해 해결하기 쉬운 작은 문제로 나눈 후, 정복한 후 병합하는 과정을 거쳐 큰 문제를 해결함
+- 보통 **recursion(재귀)**를 사용
+- 퀵 정렬(Quick Sort), 병합 정렬(Merge Sort), 이진 탐색(Binary Search)
+
+### 35. 파티션의 종류
+#### 1. 범위 분할(Range Partitioning)
+- **지정한 열의 값을 기준**으로 범위를 지정하여 분할함.
+-  *<u>일별, 월별, 분기별 등</u>*
+
+#### 2. 해시 분할(Hash Partitioning)
+- **해시 함수를 적용한 결과 값**에 따라 데이터를 분할함
+- <u>특정 파티션에 데이터가 집중되는 범위 분할의 단점을 보완</u>한 것으로, 데이터를 **고르게 분산**할 때 유용함
+- **특정 데이터가 어디에 있는지 판단할 수 있음**
+- <u>고객번호, 주민번호</u> 등과 같이 데이터가 고른 컬럼에 효과적임
+
+#### 3. 조합 분할(Composite Partitioning)
+- 범위 분할로 분할한 다음 해시 함수를 적용하여 다시 분할하는 방식
+- **범위 분할한 파티션이 너무 커서 관리가 어려울 때** 유용함.
+
+#### 4. 목록 분할(List Partitioning)
+- **지정한 열 값에 대한 목록**을 만들어 이를 기준으로 분할
+- '국가' 라는 열에 '한국','미국','일본' 이 있는 경우 '미국' 을 제외할 목적으로 '아시아' 라는 목록을 만들어 분할함
+
+#### 5. 라운드 로빈 분할(Round Robin Partitioning)
+- **레코드를 균일하게 분해**하는 방식
+- 각 레코드가 **순차적으로 분해**되며, *<u>기본키가 필요 없음</u>*
