docs: edit docs

--- a/오답노트/2020-3.md
+++ b/오답노트/2020-3.md
@@ -280,3 +280,45 @@ CASE는 소프트웨어 개발 과정에서 사용되는 요구 분석, 설계, 
 #### 5. 라운드 로빈 분할(Round Robin Partitioning)
 - **레코드를 균일하게 분해**하는 방식
 - 각 레코드가 **순차적으로 분해**되며, *<u>기본키가 필요 없음</u>*
+
+### 41. 정규화 과정
+1. `1NF`: 모든 도메인이 원자값
+2. `2NF`: 부분적 함수 종속 제거
+3. `3NF`: 이행적 함수 종속 제거
+4. `BCNF`(보이스/코드 정규형): 결정자이면서 후보키가 아닌 것 제거
+5. `4NF`: 다치 종속 제거
+6. `5NF`: 조인 종속성 이용
+
+### 45. DDL, DML, DCL
+#### DDL
+- `CREATE`, `ALTER`, `DROP`
+
+### DML
+- `SELECT`, `INSERT`, `DELETE`, `UPDATE`
+
+### DCL
+- `COMMIT`,`ROLLBACK`, `GRANT`, `REVOKE`
+
+### 47. 무결성(Intergraty)
+무결성이란 <u>데이터베이스에 저장된 데이터 값과 그것이 표현하는 현실 세계의 실제값이 일치하는 정확성</u>을 의미한다.
+
+#### 개체 무결성(Entity Integrity, 실체 무결성)
+- **기본키를 구성하는 어떤 속성도 null 값이나 중복값을 가질 수 없음**
+
+#### 도메인 무결성(Domain Integrity)
+- 주어진 속성 값이 정의된 도메인에 속한 값이어야 한다는 규정
+
+#### 참조 무결성(Referential Integrity)
+- **외래키 값은 null 이거나 참조 릴레이션의 기본키 값과 동일**해야 한다. 즉, 릴레이션은 *<u>참조할 수 없는 외래키 값을 가질 수 없음</u>*
+
+#### 사용자 행위 무결성(User-Defined Integrity)
+- 속성 값들이 사용자가 정의한 제약조건에 만족해야 함
+
+### 48. 분산 데이터베이스의 목표
+1. `위치 투명성(Location Transparency)`: 액세스하려는 데이터베이스의 **실제 위치를 알 필요 없이** 단지 *<u>데이터베이스의 논리적인 명칭만으로</u>* 액세스 가능
+
+2. `중복 투명성(Replication Transparency)`: 동일 데이터가 여러 곳에 중복되어 있더라도 사용자는 *<u>마치 하나의 데이터만 존재하는 것처럼 사용</u>*하고, 시스템은 자동으로 여러 자료에 대한 작업을 수행
+
+3. `병행 투명성(Concurrency Transparency)`: 분산 데이터베이스와 관련된 **다수의 트랜잭션이 동시에 실행** 되더라도 그 트랜잭션의 결과는 **영향을 받지 않는다.**
+
+4. `장애 투명성(Failure Transparency)`: 트랜잭션, DBMS, 네트워크, 컴퓨터 **장애에도 불구하고 트랜잭션을 정확하게 처리**
