--- a/오답노트/2020-3.md
+++ b/오답노트/2020-3.md
@@ -322,3 +322,46 @@ CASE는 소프트웨어 개발 과정에서 사용되는 요구 분석, 설계, 
 3. `병행 투명성(Concurrency Transparency)`: 분산 데이터베이스와 관련된 **다수의 트랜잭션이 동시에 실행** 되더라도 그 트랜잭션의 결과는 **영향을 받지 않는다.**
 
 4. `장애 투명성(Failure Transparency)`: 트랜잭션, DBMS, 네트워크, 컴퓨터 **장애에도 불구하고 트랜잭션을 정확하게 처리**
+
+### 52. Division 연산
+- `Division`: **X⊃Y**인 두 릴레이션 R(X)와 R(Y)가 있을 때, Y의 속성값을 가지고 있는 튜플(행) 중 Y가 가진 속성만 제외하고 출력함
+
+### 53. 회복 기법
+1. `연기 갱신 기법(Defferred Update)`
+- *<u>트랜잭션이 성공적으로 완료될 때까지 데이터베이스에 대한 실질적인 갱신을 연기</u>*
+- 트랜잭션이 수행되는 동안 갱신된 내용은 일단 Log에 보관됨
+- 트랜잭션의 **부분 완료(성공적인 완료 직전)** 시점에 Log에 보관한 갱신 내용을 실제 데이터베이스에 기록함
+- 트랜잭션이 부분 완료되기 전 장애가 발생하여 트랜잭션이 Rollback되면 트랜잭션이 실제 데이터베이스에 영향을 미치지 않았기 때문에 어떠한 갱신 내용도 취소시킬 필요 없이 무시하면 됨
+- **Redo** 작업만 가능함
+
+2. `즉각 갱신 기법(Immediate Update)`
+- 트랜잭션이 데이터를 갱신하면 *<u>트랜잭션이 부분 완료되기 전이라도 즉시 실제 데이터베이스에 반영</u>*하는 방법
+- 장애가 발생하여 회복 작업할 경우를 대비하여 갱신된 내용들은 Log에 보관시킴
+- 회복 작업을 할 경우에는 **Redo와 Undo 모두 사용 가능**함
+
+3. `그림자 페이지 대체 기법(Shadow Paging)`
+- 갱신 이전의 데이터베이스를 일정 크기의 페이지 단위로 구성하여 각 페이지마다 **복사본인 그림자 페이지로 별도 보관**해 놓고, 실제 페이지를 대상으로 트랜잭션에 의한 갱신 작업을 하다가 장애가 발생하여 트랜잭션을 Rollback 시킬 때, *<u>갱신된 이후의 실제 페이지 부분에 그림자 페이지를 대체하여 회복</u>*시키는 방법
+- **로그, Undo 및 Redo 알고리즘이 필요 없음**
+
+4. `검사점 기법`
+트랜잭션 실행 중 특정 단계에서 재실행할 수 있도록 갱신 내용이나 시스템에 대한 상황 등에 관한 정보와 함께 **검사점을 로그에 보관**해 두고, 장애 발생 시 *<u>트랜잭션 전체를 철회하지 않고 검사점부터 회복 작업을 하여 회복 시간을 절약</u>*하도록 하는 기법
+
+### 58. SQL 집계 함수(aggregation function)
+`GROUP BY` 절에 그룹별로 속성의 값을 집계할 때 사용한다.
+- `COUNT(속성명)`: 그룹별 튜플 수를 구하는 함수
+- `SUM(속성명)`: 그룹별 합계를 구하는 함수
+- `MAX(속성명)`: 그룹별 최대값을 구하는 함수
+- `MIN(속성명)`: 그룹별 최소값을 구하는 함수
+- `STDDEV(속성명)`: 그룹별 **표준편차**를 구하는 함수
+- `VARIANCE(속셩명)`: 그룹별 **분산**을 구하는 함수
+
+### 63. 쉘 스크립트에서 사용할 수 있는 제어문
+1. 선택형: `if`, `case`
+2. 반복형: `for`, `while`, `until`
+
+### 66. HRN(Highest Response-ratio Next)
+- 실행 시간이 긴 프로세스에 불리한 SJF 기법을 보완하기 위한 것으로, 대기 시간과 서비스(실행)시간을 이용
+- 우선순위 계산 공식을 이용하여 **서비스(실행) 시간이 짧은 프로세스나 대기 시간이 긴 서비스에게 우선순위**를 주어 CPU를 할당
+- 서비스 실행 시간이 짧거나 대기 시간이 긴 프로세스일 경우 우선순위가 높아짐
+- 우선순위를 계산하여 **숫자가 가장 높은 것부터 낮은 순으로 우선순위 부여**
+- 우선순위 계산식: <u>**(대기시간 + 서비스 시간) / 서비스 시간**</u>
