docs: edit docs

--- a/오답노트/2020-3.md
+++ b/오답노트/2020-3.md
@@ -365,3 +365,72 @@ CASE는 소프트웨어 개발 과정에서 사용되는 요구 분석, 설계, 
 - 서비스 실행 시간이 짧거나 대기 시간이 긴 프로세스일 경우 우선순위가 높아짐
 - 우선순위를 계산하여 **숫자가 가장 높은 것부터 낮은 순으로 우선순위 부여**
 - 우선순위 계산식: <u>**(대기시간 + 서비스 시간) / 서비스 시간**</u>
+
+### 67. 운영체제(OS)
+컴퓨터 시스템의 자원들을 효율적으로 관리하며, 사용자가 컴퓨터를 편리하고 효율적으로 사용할 수 있도록 환경을 제공하는 소프트웨어
+- 컴퓨터 *<u>사용자와 컴퓨터 하드웨어 간의 인터페이스로서 동작하는 시스템 소프트웨어</u>*의 일종으로, 다른 응용 프로그램이 유용한 작업을 할 수 있도록 환경을 제공해준다.
+- 컴퓨터 운영체제의 종류에는 `Windows`, `UNIX`, `Linux`, `Mac OS` 등이, 모바일 운영체제에는 `iOS`, `Android` 등이 있다.
+- 운영체제 관련 요구사항 식별 시 고려사항: **가용성, 성능, 기술 지원, 주변 기기, 구축 비용**
+
+### 68. 배치 프로그램(Batch Program)
+사용자와의 **상호작용 없이** 여러 작업들을 *<u>미리 정해진 일련의 순서에 따라 일괄적으로 처리</u>*하는 것을 의미한다.
+
+- 배치 프로그램이 갖추어야 하는 필수 요소
+1. `대용량 데이터`: 대량의 데이터를 가져오거나, 전달하거나, 계산하는 등의 처리가 가능해야 함
+2. `자동화`: 심각한 오류가 발생하는 상황을 제외하고는 **사용자의 개입 없이** 수행되어야 함
+3. `견고성`: 잘못된 데이터나 데이터 중복 등의 상황으로 **중단되는 일 없이 수행**되어야 함
+4. `안정성/신뢰성`: 오류가 발생하면 **오류의 발생 위치, 시간 등을 추적할 수 있어야 함**
+
+### 69. TCP(Transmission Control Protocol)
+- **양방향 연결**(Full Duplex Connection)형 서비스를 제공함
+- **스트림 위주의 전달**(패킷 단위)를 함
+- **신뢰성 있는 경로를 확립**하고 메세지 전송을 감독함
+- **순서 제어, 오류 제어, 흐름 제어**기능을 함
+- TCP 프로토콜의 헤더는 기본적으로 **20Byte에서 60Byte**까지 사용할 수 있는데, 선택적으로 40Byte를 더 추가할 수 있으므로 **최대 100Byte**까지 크기를 확장할 수 있음
+
+### 70. 순차적 응집도 vs 절차적 응집도
+- `순차적 응집도`: 모듈 내 하나의 활동으로부터 나온 **출력 데이터를 그 다음 활동의 입력 데이터로 사용할 경우**의 응집도
+- `절차적 응집도`: 모듈이 다수의 관련 기능을 가질 때 **모듈 안의 구성 요소들이 그 기능을 순차적으로 수행**할 경우의 응집도
+
+### 71. 데이터 링크 계층(Data Link Layer)
+- 두 개의 인접한 개방 시스템들 간에 *<u>신뢰성 있고 효율적인 정보 전송</u>*을 할 수 있도록 **시스템간 연결 설정과 유지 및 종료**를 담당함
+- 송신 측과 수신 측의 속도 차이를 해결하기 위한 **흐름 제어** 기능을 함
+- 프레임의 시작과 끝을 구분하기 위한 **프레임의 동기화**기능을 함
+- 오류의 검출과 회복을 위한 **오류 제어**기능을 함
+
+### 72. 결합도(Coupling)
+`내용 결합도` > `공통(공유)결합도` > `외부 결합도` > `제어 결합도` > `스탬프(검인) 결합도` > `자료 결합도`
+
+### 73. 기억장치 관리 - 배치(Placement)전략
+배치 전략은 새로 반입되는 프로그램이나 데이터를 주기억장치위 어디에 위치시킬 것인지를 결정하는 전략이다.
+
+1. `최초 적합(First fit)`: 프로그램이나 데이터가 들어갈 수 있는 크기의 빈 영역 중에서 **첫 번째 분할 영역**에 배치시키는 방법
+2. `최적 적합(Best Fit)`: 프로그램이나 데이터가 들어갈 수 있는 크기의 빈 영역 중에서 **단편화를 가장 작게 남기는 분할 영역에 배치**시키는 방법
+3. `최악 적합(Worst Fit)`: 프로그램이나 데이터가 들어갈 수 있는 크기의 빈 영역 중에서 **단편화를 가장 많이 남기는 분할 영역에 배치**시키는 방법
+
+> **단편화** : 메모리를 할당할 때, 프로세스가 필요로 하는 크기보다 더 큰 메모리가 할당되어서 프로세스에서 사용하는 메모리 공간이 낭비되는 상황
+
+### 74. IP 주소(Internet Protocol Address)
+IP 주소는 인터넷에 연결된 모든 컴퓨터 자원을 구분하기 위한 고유한 주소이다.
+- 숫자로 8비트씩 4부분, **총 32비트**로 구성되어 있다.
+- IP 주소는 네트워크 부분의 길이에 따라 다음과 같이 A 클래스에서 E 클래스까지 총 5단계로 구성되어 있다.
+
+#### A Class (~127)
+- 국가나 대형 통신망에 사용(**0~127로 시작**), 2^24 = 16,777,216 개의 호스트 사용 가능
+
+#### B Class (128~191)
+- 중대형 통신망에 사용(**128~191로 시작**), 2^16 = 65,536개의 호스트 사용가능
+
+#### C Cass (192~223)
+- 소규모 통신망에 사용 (**192~223으로 시작**), 2^8 = 256개의 호스트 사용 가능
+
+#### D Class(224~239)
+- 멀티캐스트용으로 사용(**224~239로 시작**)
+
+#### E Class
+실험적 주소이며 공용되지 않음
+
+#### 네트워크 서브네팅(Subnetting)
+서브네팅은 *<u>할당된 네트워크 주소를 다시 여러 개의 작은 네트워크로 나누어 사용</u>*하는 것을 말한다.
+- 4바이트의 IP 주소 중 네트워크 주소와 호스트 주소를 구분하기 위한 비트를 **서브넷 마스크(Subnet MAsk)**라고 하며, 이를 변경하여 네트워크 주소를 여러 개로 분할하여 사용한다.
+- 서브넷 마스크는 각 클래스마다 다르게 사용된다.
