--- a/오답노트/2020-3.md
+++ b/오답노트/2020-3.md
@@ -201,7 +201,7 @@ CASE는 소프트웨어 개발 과정에서 사용되는 요구 분석, 설계, 
 
 ### 26. 순환복잡도(mccabe의 cyclomatic)
 순환 복잡도는 한 프로그램의 논리적인 복잡도를 측정하기 위한 소프트웨어 척도로, **맥케이브 순환도** 또는 맥케이브 복잡도 메트릭이라고도 하며, 제어 흐름도 이론에 기초를 둔다.
-- 순환 복잡도를 이용하여 계산된 값은 *<u>프로그램의 독립적인 경로의 수</u>*를 정의하고, *<u>모든 경로가 한 번 이상 수행되었음을 보장/u>*하기 위해 행해주는 테스트 횟수의 상한선을 제공한다.
+- 순환 복잡도를 이용하여 계산된 값은 *<u>프로그램의 독립적인 경로의 수</u>*를 정의하고, *<u>모든 경로가 한 번 이상 수행되었음을 보장</u>*하기 위해 행해주는 테스트 횟수의 상한선을 제공한다.
 1. 순환 복잡도는 제어 흐름도의 영역 수와 일치하므로 영역 수를 계산한다.
 2. `순환 복잡도 = 화살표 수 - 노드 수 + 2`
 
