--- a/오답노트/240320.md
+++ b/오답노트/240320.md
@@ -59,7 +59,7 @@
 ##### 커널 레벨 스레드
 - 프로세스의 스레드들을 몇몇 프로세서에 **한꺼번에 디스패치**할 수 있기 때문에 *<u>멀티프로세서 환경에서 매우 빠르게 동작</u>*한다.
 - 다른 스레드가 입출력 작업을 다 끝낼 때까지 다른 스레드를 사용해 작업을 진행할 수 있다.
-- 커널이 **각 스레드들을 개별적으로 관리**할 수 있다.
+- 커널이 **각 스레드들을 개별적으로 관리**할 수 있다.(*<u>독립적인 스케줄링 가능</u>*)
 - 커널이 직접 스레드를 제공해 주기 때문에 안정성과 다양한 기능이 제공된다.
 - 스케줄링과 동기화를 위해 **커널을 호출하는 데 무겁고 오래 걸린다.**
 - 사용자 모드에서 커널 모드로의 전환이 빈번하게 이루어져 **성능 저하**가 발생한다.
@@ -71,3 +71,25 @@
 - 스케줄링 결정이나 동기화를 위해 커널을 호출하지 않기 때문에 **인터럽트가 발생할 때 커널 레벨 스레드보다 오버헤드가 적음**
 - 시스템 전반에 걸친 **스케줄링 우선순위를 지원하지 않는다**.
 - 프로세스에 속한 스레드 중 **I/O 작업 등에 의하여 하나라도 블록이 걸린다면 전체 스레드가 블록**된다.
+
+#### 9. C언어 프로그램 실행 결과
+```c
+#include <stdio.h>
+  int main(int argc, char *argv[]){
+
+    int a[] = {14, 22, 30, 38};
+
+    printf("%u, ", &a[2]); // a[2]의 주소, 18
+    printf("%u", a);
+
+    return 0
+  }
+```
+> `a[0]`의 주소값이 10일 경우, 다음 C언어 프로그램이 실행되었을 떄의 결과는? (단, int 형의 크기는 4Byte로 가정한다.)
+- `a[0]`: 10~13, `a[1]`: 14~17, `a[2]`: 18~21 의 메모리를 갖는다.
+- C언어에서 배열 위치를 나타내는 첨자 없이 배열 이름을 사용하면 **배열의 첫 번째 요소의 <u>주소</u>를 지정**하는 것과 같다.
+
+
+#### 10. 대칭 암호 알고리즘, 비대칭 암호 알고리즘
+> **대칭 암호 알고리즘**: 개인키 암호 방식(비밀키 암호 방식)
+> **비대칭 암호 알고리즘**: 공개키 암호 방식 
