docs: edit docs

--- a/오답노트/240320.md
+++ b/오답노트/240320.md
@@ -92,4 +92,54 @@
 
 #### 10. 대칭 암호 알고리즘, 비대칭 암호 알고리즘
 > **대칭 암호 알고리즘**: 개인키 암호 방식(비밀키 암호 방식)
+- 키 전달 및 관리가 어려움
+- 키가 공격자에게 노출되면 보안이 취약해짐
+- 키 사이즈가 작고 암호 알고리즘 구조가 간단하여 연산속도가 빨라 효율적인 암호 시스템 구축 가능
+- 키를 수신자에게 비밀리에 보냄
+- 대칭 암호 알고리즘에서도 키 교환은 필요하다.
+
 > **비대칭 암호 알고리즘**: 공개키 암호 방식 
+- 대칭키 알고리즘에 비해 속도가 느림
+- 암호화 키와 복호화 키가 다름
+
+#### 11. UML 다이어그램의 종류
+##### 구조적 다이어그램의 종류
+1. 클래스 다이어그램
+- **클래스**와 클래스가 가지는 **속성**, **클래스 사이의 관계**를 표현함. *<u>시스템의 구조를 파악하고 구조상의 문제점을 도출</u>*할 수 있음.
+
+2. 객체 다이어그램
+- 클래스에 속한 사물(객체)들, 즉 *<u>인스턴스를 특정 시점의 객체와 객체 사이의 관계로 표현</u>*함. 럼바우 객체지향 분석 기법에서 **객체 모델링**에 활용됨.
+
+3. 컴포넌트 다이어그램
+- 실제 구현 모듈인 **켬포넌트 간의 관계나 컴포넌트 간의 인터페이스**를 표현함. *<u>노드와 의사소통(통신)</u>* 경로로 표현함. **구현 단계**에서 사용되는 다이어그램
+
+4. **배치 다이어그램**
+- 결과물, 프로세스, 컴포넌트 등 **물리적 요소들의 위치를 표현**함. **구현 단계**에서 사용되는 다이어그램
+
+5. 복합체 구조 다이어그램
+- 클래스나 컴포넌트가 복합 구조를 갖는 경우 그 내부 구조를 표현함
+
+6. 패키지 다이어그램
+- 유스케이스나 클래스 등의 *<u>모델 요소들을 그룹화한 패키지들의 관계</u>*를 표현함
+
+##### 행위 다이어그램의 종류
+1. 유스케이스 다이어그램
+- *<u>사용자의 요구를 분석하는 것</u>*으로 **기능 모델링** 작업에 사용함. 사용자와 사용 사례로 구성되며, 사용 사례 간에는 여러 형태의 관계로 이루어짐
+
+2. 순차 다이어그램
+- 상호 작용하는 시스템이나 객체들이 **주고받는 메세지**를 표현함
+
+3. 커뮤니케이션 다이어그램
+- 순차 다이어그램과 같이 동작에 참여하는 객체들이 주고받는 메세지를 표현하는데, 메세지 뿐만 아니라 **객체들 간의 연관까지 표현**함
+
+4. 상태 다이어그램
+- 하나의 객체가 자신이 속한 클래스의 **상태 변화** 혹은 다른 객체와의 **상호 작용에 따라 상태가 어떻게 변화하는지**를 표현함. 럼바우 객체지향 분석 기법에서 **동적 모델링**에 활용됨
+
+5. 활동 다이어그램
+- 시스템이 어떤 기능을 수행하는지 객체의 **처리 로직**이나 **조건에 따른 처리의 흐름**을 순서에 따라 표현함
+
+6. 상호작용 개요 다이어그램
+- 상호작용 다이어그램 간의 제어 흐름을 표현함
+
+7. 타이밍 다이어그램
+- *<u>객체 상태 변화와 시간 제약</u>*을 **명시적으로 표현**함.
