--- a/오답노트/240320.md
+++ b/오답노트/240320.md
@@ -143,3 +143,40 @@
 
 7. 타이밍 다이어그램
 - *<u>객체 상태 변화와 시간 제약</u>*을 **명시적으로 표현**함.
+
+#### 12. 소프트웨어 재공학의 주요 활동
+1. 분석(Analysis)
+- 기존 소프트웨어 명세서를 확인하여 소프트웨어 동작을 이해하고, 재공학할 대상을 선정하는 활동
+
+2. 재구성(Restructuring)
+- 기존 소프트웨어의 *<u>구조를 향상</u>*시키기 위하여 코드를 재구성하는 활동
+- 소프트웨어의 기능과 외적인 동작은 *<u>바뀌지 않음</u>*
+
+3. 역공학(Reverse Engineering)
+- 기존 소프트웨어를 분석하여 소프트웨어 개발 과정과 데이터 처리 과정을 설명하는 *<u>분석 및 설계 정보를 재발견하거나 다시 만들어 내는 활동</u>*
+- 일반적인 개발 단계와는 반대 방향으로 **기존 코드를 복구**하거나, 기존 소프트웨어의 구성 요소와 그 관계를 파악하여 **설계도를 추출**함
+
+4. 이식(Migration)
+- 기존 소프트웨어를 **다른 운영체제나 하드웨어 환경에서 사용할 수 있도록 변환**하는 활동
+
+#### 13. IPv6
+- **128비트**의 긴 주소를 사용하여 주소 부족 문제 해결
+- IPv4에 비해 빠른 자료 전송 속도
+- **인증성, 기밀성, 데이터 무결성**의 지원으로 보안 문제 해결
+- IPv4와 호환성이 뛰어남
+- 주소의 **확장성, 융통성, 연동성**이 뛰어나며, **실시간 흐름 제어**로 향상된 멀티미디어 기능 지원
+- 패킷의 크기를 확장할 수 있으므로 **패킷 크기에 제한이 없다.**
+- **2128개**의 주소를 표현할 수 있다.
+- **16비트씩 8**부분, 총 128비트로 구성되어 있다.
+- *<u>등급별, 서비스별로 패킷을 구분</u>*할 수 있어 품질보장이 용이허다.
+
+#### 14. 캡슐화와 정보은닉
+##### 캡슐화
+- 데이터와 해당 데이터의 처리 기능을 하나로 묶어냄
+- 캡슐화가 되어 있다고 반드시 정보은닉이 되는 것은 아니다.
+
+##### 정보은닉
+- 캡슐 내의 요소들에 대한 세부 구현사항을 외부에 숨기는 장치
+- 다른 객체에게 자신의 정보를 숨김
+
+#### 15. CSMA/CA
