docs: edit docs

--- a/오답노트/240320.md
+++ b/오답노트/240320.md
@@ -179,4 +179,46 @@
 - 캡슐 내의 요소들에 대한 세부 구현사항을 외부에 숨기는 장치
 - 다른 객체에게 자신의 정보를 숨김
 
-#### 15. CSMA/CA
+#### 15. CSMA/CA vs CSMA/CD
+##### CSMA/CA(Carrier Sense Multiple Access / Collision Avoidance)
+- OSI 7계층의 **데이터 링크** 계층인 **MAC** 계층에서 동작하는 매체 액세스 방법
+- 가장 먼저 매체에 액세스 시도를 한 컴퓨터에게 사용 권한을 주는 방법
+- CSMA/CA 는 무선 랜에서 데이터 전송 시 *<u>매체가 비어있음</u>*을 확인한 뒤 충돌을 피하기 위해 일정한 시간을 기다린 후 데이터를 전송하는 방법이다.
+- **회선을 사용하지 않는 경우에도 확인 신호를 전송**하여 *<u>동시 전송에 의한 충돌</u>*을 예방한다.
+- 먼저 데이터를 전송할 컴퓨터는 *<u>회선 상태가 활동 중인지를 감지</u>*한 다음에 회선이 비어있는 상태로 감지하면 데이터를 전송하기 위해 **회선 상에 있는 다른 컴퓨터에게 회선 사용 의도를 알린다.**
+> - 회선 감지: 회선 상에 흘러 다니는 데이터가 없는지 감지를 한다. 
+> - ENQ 신호 전송: 회선에 데이터가 감지되지 않으면 전체 네트워크 상으로 회선 사용 의도를 알린다.
+> - ACK 신호 전송: 전송할 데이터가 없는 노드들은 회선을 사용해도 좋다는 신호를 전송하낟.
+> - 데이터 전송: 정상적으로 회선을 사용해도 좋다는 신호를 받으면 즉각 데이터의 전송을 시작한다.
+
+##### CSMA/CD(Carrier Sense Multiple Access/Collision Detection)
+- CSMA/CA와 같은 방법으로 동작하나, 회선 상태가 비어 있는 상태로 감지되면 **즉각 데이터 전송**을 하고 만약 충돌이 발생할 경우 **네트워크 상의 다른 컴퓨터에게 충돌 사실을 알린다.**
+- 충돌 방생 사실을 전달받은 다른 컴퓨터들은 **임의의 시간 동안 대기한 후 다시 재전송을 시도한다.**
+> - 회선 감지: 회선 상에 흘러다니는 데이터가 없는지 감지한다.
+> - 데이터 전송: 회선 상에 흘러다니는 데이터가 없으면 즉시 데이터의 전송을 시작한다.
+> - 충돌 발생: 동시에 데이터를 전송하면 충돌이 발생하고 충돌 발생 사실을 네트워크상의 다른 컴퓨터에게 알린다.
+> - 회선 감지: 충돌 발생 사실을 전달받은 다른 컴퓨터는 임의의 시간 동안 대기한 후 다시 회선 사이의 데이터를 감지한다.
+
+#### 16. 메시지 지향 미들웨어(Message-Oriented Middlware, MOM)
+- *<u>메시지 기반의</u>*의 **비동기형 메시지**를 전달하는 방식의 미들웨어
+- *<u>온라인 업무보다는 이기종 분산 데이터 시스템의 데이터 동기</u>*를 위해 사용
+- `Queue`, `Broadcast`, `Multicast` 방식으로 메세지를 전달함
+- 메세지를 발행하는 `Publisher(Producer)`와 메세지를 구독하는 `Subscribe(Consumer)`로 구성
+- 송신측과 수신측의 연결 시 메시지 큐를 활용
+
+#### 17. 유스케이스(Use Case)의 구성 요소 간 관계
+- 유스케이스 다이어그램에서 액터와 유스케이스, 유스케이스와 유스케이스 사이에서 나타날 수 있으며 **연관 관계/포함관계/확장관계/일반화관계**를 포함할 수 있음
+
+#### 18. 워크스루(Walkthrough)
+- 개발자가 자체적으로 수행하며 *<u>계획없이 임의적으로 실시</u>*한다.
+- 개발자가 코드를 읽고, 동료가 결함을 지적하거나 개선안을 제시한다. 
+- 작성자는 결함이나 제안사항을 개별 기록한다. 
+- 별도의 진행자는 없다.
+- 사용사례를 확장하여 명세하거나 설계 다이어그램, 원시코드, 테스트 케이스 등에 적용 할 수 있다.
+- *<u>복잡한 알고리즘 또는 반복, 실시간 동작, 병행 처리와 같은 기능이나 동작을 이해</u>*하려고 할때 유용하다.
+- 단순한 테스트 케이스를 이용하여 **프로덕트를 수작업으로 수행**해 보는 것이다.
+- 요구사항 명세서 작성자를 포함하여 사전 검토(**요구사항 명세서를 미리 배포**)한 후에 짧은 검토 회의를 통해 결함을 발견한다.
+
+#### 19. 인터페이스 구현 검증 도구
+- 인터페이스 구현을 검증하기 위해서는 *<u>인터페이스 단위 기능과 시나리오</u>* 등을 기반으로 하는 통합 테스트가 필요하다.
+- 통합 테스트는 다음과 같은 테스트 자동화 도구를 이용하면 효율적으로 수행 가능함
