docs: edit docs

--- a/오답노트/240320.md
+++ b/오답노트/240320.md
@@ -222,3 +222,58 @@
 #### 19. 인터페이스 구현 검증 도구
 - 인터페이스 구현을 검증하기 위해서는 *<u>인터페이스 단위 기능과 시나리오</u>* 등을 기반으로 하는 통합 테스트가 필요하다.
 - 통합 테스트는 다음과 같은 테스트 자동화 도구를 이용하면 효율적으로 수행 가능함
+
+1. `xUnit`
+- 같은 테스트 코드를 여러번 작성하지 않게 도와주고, 테스트마다 예상 결과를 기억할 필요가 없게 하는 자동화된 해법을 제공하는 *<u>단위 테스트 프레임워크</u>*
+- Smalltalk에 처음 적용되어 `SUnit` 이라는 이름이었으나 Java용의 **JUnit**, C++ 용의 **CppUnit**, .NET용의 **NUnit**, Http용의 **HttpUnit** 등 다양한 언어에 적용되면서 xUnit으로 통칭되고 있음
+
+2. `STAF`
+- 서비스 호출 및 *<u>컴포넌트 재사용</u>* 등 다양한 환경을 지원하는 테스트 프레임워크
+- *<u>크로스 플랫폼, 분산 소프트웨어 테스트</u>*환경을 조성할 수 있도록 지원
+- 분산 소프트웨어의 경우 각 분산 환경에 설치된 **데몬**이 프로그램 테스트에 대한 응답을 대신하며, 테스트가 완료되면 이를 통합하고 자동화하여 프로그램을 완성함
+
+3. `FitNesse`: **웹 기반** 테스트케이스 설계, 실행, 결과 확인 등을 지원하는 테스트 프레임워크
+
+4. `NTAF`: Fitnesse의 장점인 *<u>협업 기능</u>*과 STAF의 장점인 *<u>재사용 및 확장성</u>*을 통합한 **NHN**의 테스트 자동화 프레임워크
+
+4. `Selenium`: *<u>다양한 브라우저 및 개발 언어</u>*를 지원하는 **웹 애플리케이션 테스트 프레임워크**
+
+5. `waitr`: **Ruby**를 사용하는 애플리케이션 테스트 프레임워크
+
+#### 20. IPv4 header(헤더)
+1. `Version 필드(4bit)`
+- TCP/IP 제품은 IPv4를 사용한다.
+
+2. `Header Length 필드(4bit)`
+- IP 헤드의 길이를 32비트 단위로 나타낸다. 대부분의 IP 헤드의 길이는 **20바이트**이며, 필드 값은 거의 항상 5이다. (5 * 32 = 160bit or 20Byte)
+
+3. `Type-of-Service Flags`
+- 서비스의 우선 순위를 제공한다.
+
+4. `Total Packet Length필드 (16bit)`
+- 전체 IP 패킷의 길이를 바이트 단위로 나타낸다.
+
+5. `Fragment Identifier필드(16Bit)`
+- 분열이 발생한 경우, 조각을 다시 결합하고 원래의 데이터를 식별하기 위해서 사용한다.
+
+6. `Fragment Offset필드(13bit)`
+- 8바이트 오프셋으로 조각에 저장된 원래 데이터의 바이트 범위를 나타낸다.
+
+7. `Time-to-live 비트(8bit)`
+- 데이터를 전달할 수 없는 것으로 판단되어 소멸되기 이전에 데이터가 이동할 수 있는 단계의 수를 나타낸다.
+- 1에서 255사이의 값을 지정하며 라우터들은 패킷을 전달 할 때마다 이 값을 하나씩 감소시킨다.
+
+8. `Protocol Identifier 필드(8bit)`
+- 수납되는 상위계층 프로토콜의 종류를 나타내는 식별자/유형/번호
+- `1 - ICMP`, `2 - IGMP`, `6 - TCP`, `17 - UDP`
+
+9. `Header Checksum 필드(16bit)`
+- IP 헤더의 체크섬을 저장하는 필드
+- 체크섬은 네트워크를 통해 전달된 값이 변경되었는지 검사하는 값으로 무결성을 제공한다.
+- 패킷이 라우터를 지나갈 때마다 TTL의 값이 변경되므로 Checksum은 항상 재계산된다. (속도가 떨어짐)
+
+10. `Source IP Address 필드(32bit)`
+- 출발지 IP 주소
+
+11. `Destination IP Address 필드(32bit)`
+- 목적지 IP 주소
