docs: edit docs

--- a/오답노트/240320.md
+++ b/오답노트/240320.md
@@ -252,6 +252,7 @@
 
 4. `Total Packet Length필드 (16bit)`
 - 전체 IP 패킷의 길이를 바이트 단위로 나타낸다.
+- **IP 헤더 및 데이터를 포함**한 IP 패킷 전체 길이를 바이트 단위로 길이를 표시. (최대값은 65,535 = 2^16 - 1)
 
 5. `Fragment Identifier필드(16Bit)`
 - 분열이 발생한 경우, 조각을 다시 결합하고 원래의 데이터를 식별하기 위해서 사용한다.
@@ -268,7 +269,7 @@
 - `1 - ICMP`, `2 - IGMP`, `6 - TCP`, `17 - UDP`
 
 9. `Header Checksum 필드(16bit)`
-- IP 헤더의 체크섬을 저장하는 필드
+- IP **헤더의 체크섬을 저장**하는 필드
 - 체크섬은 네트워크를 통해 전달된 값이 변경되었는지 검사하는 값으로 무결성을 제공한다.
 - 패킷이 라우터를 지나갈 때마다 TTL의 값이 변경되므로 Checksum은 항상 재계산된다. (속도가 떨어짐)
 
@@ -277,3 +278,43 @@
 
 11. `Destination IP Address 필드(32bit)`
 - 목적지 IP 주소
+
+#### 21. 보안 관련 용어
+1. `서비스형 블록체인(BaaS: BlockChain as a Service)`
+- 블록체인(BlockChain)앱의 개발 환경을 *<u>클라우드 기반으로</u>* 제공하는 서비스
+- 블록체인 네트워크에 **노드의 추가 및 제거가 용이**하고, 블록체인 플랫폼마다 다른 블록체인 기술을 보다 편리하게 사용할 수 있게 함
+
+2. `OWASP(the Open Web Application Security Project)`
+- 웹 정보 노출이나 악성 코드, 스크립트, 보안이 취약한 부분을 연구하는 비영리 단체
+- 보안 취약점 중 보안에 미치는 영향이 큰 것을 기준으로 선정한 10대 웹 애플리케이션 취약점을 3~4년에 한 번씩 발표하고 있음
+
+3. `TCP 래퍼(TCP Wrapper)`
+- **외부 컴퓨터의 접속 인가 여부를 점검**하여 접속을 허용 및 거부하는 보안용 도구
+- 네트워크에 접속하면 로그인한 다른 컴퓨터 사용자의 ID 및 로그를 조회하여 악용이 가능한데, 이것을 방지가히 위한 **방화벽** 역할을 수행함
+
+4. `허니팟(Honeypot)`
+- *<u>비정상적인 접근을 탐지</u>*하기 위해 설치해 둔 시스템
+- **침입자를 속여 실제 공격을 당하는 것처럼 보여줌**으로써 추적 및 공격기법에 대한 정보를 수집함
+
+5. `DPI(Deep Packet Inspection)`
+- *<u>OSI 7 Layer 전 계층의 프로토콜과 패킷 내부</u>*의 콘텐츠를 파악하여 **침입 시도, 해킹 등을 탐지**하고, **트래픽을 조정**하기 위한 **패킷 분석**기술
+
+#### 22. IP 프로토콜의 주요 특징
+- **비연결형** 서비스이다.
+- **패킷 분할/병합** 기능이 있다.
+- *<u>데이터 체크썸은 없으며</u>*, **헤더 체크썸만 제공**한다.
+- `Best-effort`: 최선은 다하며 결과를 보장하진 못한다.
+
+#### 23. 하향식 설계 vs 상향식 설계
+##### 하향식 설계
+> 메인 컴포넌트를 분해하여 아래로 늘어뜨리면서 개발
+- 계층 구조상에서 시스템의 주요 컴포넌트들을 찾고 *<u>그것을 낮은 수준의 컴포넌트들로 분해</u>*하는 것으로 메인 모듈의 설계에서 시작하여 단계적으로 구체화 시키는 것
+- 통합 검사 시 **인터페이스가 이미 정의되어 있어 통합이 간단**하다.
+- 레벨이 낮은 데이터 구조의 세부 사항은 *<u>설계 초기 단계에서 필요</u>*
+- 모든 것을 새로 개발해야하는 작업, 시스템 명세가 정확한 경우 적합
+
+##### 상향식 설계
+> 밑바닥부터 위를 향해서 설계해 나가는 설계 방식
+- 가장 기본적인 컴포넌트들을 먼저 설계하고, 이것을 사용하는 상위 수준의 컴포넌트를 만들어 나가는 것
+- 최하위부터 모듈을 설계하고, 모듈이 완성되면 이들을 결합하여 검사한다.
+- 기존 컴포넌트를 조합하여 시스템을 개발하는 경우는 상향식이 적합하다.
