--- a/오답노트/240320.md
+++ b/오답노트/240320.md
@@ -318,3 +318,36 @@
 - 가장 기본적인 컴포넌트들을 먼저 설계하고, 이것을 사용하는 상위 수준의 컴포넌트를 만들어 나가는 것
 - 최하위부터 모듈을 설계하고, 모듈이 완성되면 이들을 결합하여 검사한다.
 - 기존 컴포넌트를 조합하여 시스템을 개발하는 경우는 상향식이 적합하다.
+
+#### 24. 아키텍처 설계과정
+아키텍처의 설계 과정은 *<u>설계 목표 결정, 시스템 타입 결정, 아키텍처 패턴 적용, 서브시스템 구체화, 검토</u>* 순으로 적용한다.
+
+1. `설계 목표 설정`: 시스템의 개발 방향을 명확히 하기 위해 설계에 영향을 주는 비즈니스 목표, 우선순위 등의 요구사항을 분석하여 **전체 시스템의 설계 목표를 설정**합니다.
+
+2. `시스템 타입 결정`: **시스템과 서브시스템의 타입**을 결정하고, 설계 목표를 고려하여 **아키텍처 패턴을 선택**한다.  
+
+3. `아키텍처 패턴 적용`: 아키텍처 표준을 참조하여 시스템의 표준 아키텍처 패턴을 선택한다.
+
+4. `서브시스템 구체화`: 서브시스템의 기능 및 서브시스템 간의 상호작용을 위한 동작과 인터페이스를 정의한다.
+
+5. `검토`: 아키텍처가 설계 목표에 부합하는지, 요구사항이 잘 반영되었는지, 설계의 기본원리를 만족하는지 등을 검토한다.
+
+#### 25. C언어 프로그램 실행 결과
+```c
+#include <stdio.h>
+#include <stdlib.h>
+
+int main(int argc, char *argv[]){
+  int arr[2][3] = {1,2,3,4,5,6};
+  int (*p)[3] = NULL; // 특정 사이즈의 배열을 가리키는 배열 포인터
+  p = arr; // 배열명 arr만 작성되면 arr[0]과 같기 때문에 배열 p 는 arr[0] 즉, {1,2,3}을 가리킨다.
+
+  printf("%d, ", *(p[0]+1) + *(p[1]+2)); 
+  // 인덱스가 없는 배열 이름은 배열의 시작주소(p[0])를 의미하며 그 주소에 +n을 하게되면 배열의 n번째 인덱스의 주소를 얻을 수 있음.
+  printf("%d", *(*(p+1)+0) + *(*(p+1)+1));
+  // *(*(p[0]+1)+0) + *(*(p[0]+1)+1);
+  // *(*p[1]+0) + *(*p[1]+1)
+  // *(*p[1]+0) + *(*p[1]+1)
+  return 0;
+}
+```
