docs: edit docs

--- a/오답노트/240320.md
+++ b/오답노트/240320.md
@@ -61,6 +61,7 @@
 - 다른 스레드가 입출력 작업을 다 끝낼 때까지 다른 스레드를 사용해 작업을 진행할 수 있다.
 - 커널이 **각 스레드들을 개별적으로 관리**할 수 있다.(*<u>독립적인 스케줄링 가능</u>*)
 - 커널이 직접 스레드를 제공해 주기 때문에 안정성과 다양한 기능이 제공된다.
+- 스레드가 시스템 호출 등으로 중단되더라도, 커널은 프로세스 내의 다른 스레드를 중단시키지 않고 계속 실행 시켜준다.
 - 스케줄링과 동기화를 위해 **커널을 호출하는 데 무겁고 오래 걸린다.**
 - 사용자 모드에서 커널 모드로의 전환이 빈번하게 이루어져 **성능 저하**가 발생한다.
 - 사용자가 프로그래밍할때 구현이 어렵고 자원을 더 많이 소비함
@@ -69,7 +70,8 @@
 - 사용자 영역에서 연산을 수행하여 **운영체제에 투명함**
 - 커널에 의존적이지 않은 형태로 스레드의 기능을 제공하는 **라이브러리를 활용**하는 방식
 - 스케줄링 결정이나 동기화를 위해 커널을 호출하지 않기 때문에 **인터럽트가 발생할 때 커널 레벨 스레드보다 오버헤드가 적음**
-- 시스템 전반에 걸친 **스케줄링 우선순위를 지원하지 않는다**.
+- 프로세스 1개(사용자 스레드 N개) 당 커널 스레드 1개가 할당된다.
+- 시스템 전반에 걸친 **스케줄링 우선순위를 지원하지 않는다**.(어떤 스케줄이 실행될지 알 수 없다.)
 - 프로세스에 속한 스레드 중 **I/O 작업 등에 의하여 하나라도 블록이 걸린다면 전체 스레드가 블록**된다.
 
 #### 9. C언어 프로그램 실행 결과
@@ -351,3 +353,36 @@ int main(int argc, char *argv[]){
   return 0;
 }
 ```
+
+### 26. 소프트웨어 아키텍처의 품질 속성
+소프트웨어 아키텍처의 품질 속성은 소프트웨어 아키텍처가 이해 관계자들이 요구하는 수준의 품질을 유지 및 보장할 수 있게 설계되었는지를 확인하기 위해 품질 평가 요소들을 *<u>시스템 측면, 비즈니스 측면, 아키텍처 측면</u>*으로 구분하여 구체화시켜 놓은 것이다.
+
+- 시스템 측면: **성능, 보안, 가용성, 기능성, 사용성, 변경 용이성, 확장성** 등
+- 비즈니스 측면: **시장 적시성, 비용과 혜택, 예상 시스템 수명**등
+- 아키텍처 측면: **개념적 무결성, 정확성, 간결성, 구축 가능성**등
+
+### 27. UML 관계(Relationship)
+1. `연관(Association)관계`
+- 2개 이상의 사물이 서로 관련되어 있음
+- 한 클래스가 **다른 클래스에서 제공하는 기능을 사용**
+
+2. `집합 관계(Aggregation)관계`
+- 하나의 사물이 다른 사물에 포함되어 있음
+
+3. `포함(Composition)관계`
+- 집합 관계의 특수한 형태로, **포함하는 사물의 변화가 포함되는 사물에게 영향을 미치는 관계**
+
+4. `일반화(Generalization)관계`
+- 하나의 사물이 다른 사물에 비해 더 일반적인지 구체적인지를 표현한다.
+- **상속 관계** 라고도 한다.
+- 한 클래스가 다른 클래스를 포함하는 상위 개념일 때, 이를 **IS-A**라고 한다.
+
+5. `의존(Dependency) 관계`
+- 연관 관계와 같이 사물 사이에 서로 연관은 있으나 필요에 의해 **서로에게 영향을 주는 짧은 시간 동안만 연관을 유지**하는 관계
+- 한 사물의 명세가 바뀌면 다른 사물에 영향을 준다.
+- 일반적으로 **한 클래스가 다른 클래스를 오퍼레이션의 매개 변수로 사용**하는 경우
+
+6. `실체화(Realization) 관계`
+- 사물이 할 수 있거나 해야 하는 기능(행위, 인터페이스)으로 서로를 그룹화할 수 있는 관계
+- **인터페이스와 인터페이스를 갖는 클래스의 관계**
+- 한 클래스가 다른 클래스에게 **오퍼레이션을 수행하도록 지정하는 관계**
