--- a/오답노트/240320.md
+++ b/오답노트/240320.md
@@ -386,3 +386,22 @@ int main(int argc, char *argv[]){
 - 사물이 할 수 있거나 해야 하는 기능(행위, 인터페이스)으로 서로를 그룹화할 수 있는 관계
 - **인터페이스와 인터페이스를 갖는 클래스의 관계**
 - 한 클래스가 다른 클래스에게 **오퍼레이션을 수행하도록 지정하는 관계**
+
+
+### 28. 정형 기술 검토(FTR)
+#### FTR
+- Formal Technical Review
+- 소프트웨어 개발 산출물 대상 요구사항 확인 및 검증을 수행하는 방법이다.
+- 동료검토, 워크스루, 인스펙션
+
+#### FTR 지침 사항
+- 제품 검토에만 집중하라
+- 의제를 제한하여 진행하라
+- 논쟁과 반박을 제한하라
+- 문제영역을 정확히 표현하라
+- 해결책이나 개선책에 대해서는 논하지 말라  
+- 참가자 수를 제한하고 사전 준비를 강요하라
+- 자원과 시간 일정을 할당하라
+- 모든 검토자들을 위해 의미 있는 훈련을 시행하라
+- 검토자들은 사전에 작성한 메모를 공유하라
+- 검토의 과정과 결과를 재검토하라
