docs: edit docs

--- a/오답노트/240320.md
+++ b/오답노트/240320.md
@@ -405,3 +405,80 @@ int main(int argc, char *argv[]){
 - 모든 검토자들을 위해 의미 있는 훈련을 시행하라
 - 검토자들은 사전에 작성한 메모를 공유하라
 - 검토의 과정과 결과를 재검토하라
+
+### 29. TCP(Transmission Control Protocol) 프로토콜
+- **양방향 연결(Full Duplex Connection)**형 서비스를 제공함
+- 전송 데이터와 응답 데이터를 함께 전송할 수 있다.
+- **스트림 위주의 전달(패킷 단위)**를 함
+- *<u>신뢰성 있는 경로를 확립하고 메시지 전송을 감독함</u>*
+- *<u>순서 제어, 오류 제어, 흐름 제어</u>*기능을 함
+- TCP 프로토콜의 헤더는 기본적으로 20바이트부터 60바이트까지 사용할 수 있는데, 선택적으로 40바이트를 더 추가할 수 있으므로 최대 100바이트까지 크기를 확장할 수 있음
+
+### 30. OSI 모델
+#### 데이터 링크 계층(Data Link Layer)
+- 두 개의 **인접한 개방 시스템들** 간에 신뢰성 있고 효율적인  정보 전송을 할 수 있도록 *<u>시스템간 연결 설정과 유지 및 종료</u>*를 담당함.
+- 송신 측과 수신 측의 속도 차이를 해결하기 위한 흐름 제어 기능을 함
+- 프레임의 시작과 끝을 구분하기 위한 *<u>프레임의 동기화</u>*기능을 함
+- 오류의 검출과 회복을 위한 *<u>요류 제어</u>*기능을 함
+
+#### 네트워크 계층(Network Layer, 망 계층)
+- 개방 시스템들 간의 네트워크 연결을 관리하는 기능과 *<u>데이터의 교환 및 중계</u>*기능을 함
+- *<u>네트워크 연결을 설정, 유지, 해제</u>*하는 기능을 함
+- **경로 설정(Routing)**, 데이터 교환 및 중계, 트래픽 제어, 패킷 정보 전송을 수행함
+- 상위 계층에서 받은 패킷에 *<u>발신지와 목적지의 논리 주소</u>*를 헤더에 추가
+
+### 31.  코드의 오류 종류
+1. 생략 오류(Omission Error)
+- 입력 시 한 자리를 빼놓고 입력한 경우
+- 1234 -> 123
+
+2. 필사 오류(Transcription Error)
+- 입력 시 **임의의 한 자리**를 잘못 기록한 경우
+- 1234 -> 1235
+
+3. 전위 오류(Transposition Error)
+- 입력 시 좌우 자리를 바꾸어 기록한 경우
+- 1234 -> 1243
+
+4. 이중 오류(Double Transposition Error)
+- 전위 오류가 두 가지 이상 발생한 경우
+- 1234 -> 2143
+
+5. 추가 오류(Addition Error)
+- 입력 시 한 자리를 추가로 기록한 경우
+- 1234 -> 12345
+
+6. 임의 오류(Random Error)
+- 위의 오류가 두 가지 이상 결합하여 발생한 경우
+- 1234 -> 12367
+
+### 32. 럼바우 분석 기법(Rumbaugh)
+- 소프트웨어 구성 요소를 *<u>그래픽 표기법</u>*을 이용하여 모델링하는 방법으로, *<u>객체 모델링 기법</u>*(OMT: Object Modeling Technique)이라고도 함
+- 분석 활동은 객체 모델링, 동적 모델링, 기능 모델링을 통해 이루어짐
+
+1. 객체 모델링(Obejct Modeling)
+- **객체 다이어그램**(객체 관계)으로 표시
+- 가장 중요하며 선행되어야 할 모델링
+- 객체 모델링 순서
+```
+1. 객체와 클래스를 식별
+2. 클래스에 대한 자료를 사전 작성
+3. 클래스 간의 관계 정의
+4. 객체 속성 및 연결 관계 정의
+5. 클래스 계층화 및 모듈로 정의
+6. 생성된 모형을 반복적으로 검증
+```
+
+2. 동적 모델링(Dynamic Modeling)
+- **상태 다이어그램(상태도)**를 이용해 시간에 따른 객체들 간의 제어 흐름, 상호 작용, 동작 순서 등의 동적인 행위를 표현하는 모델링
+- 동적 모델링 순서
+```
+1. 사건의 상호 작용 순서에 대한 시나리오 작성
+2. 시나리오를 역할과 시간에 따라 표기한 후 사건 추적도 작성
+3. 사건 추적도를 사건 발생자의 관계로 설명하는  사건 흐름도 작성
+4. 사건과 상태를 연결시킨 상태 상태도 작성
+```
+
+3. 기능 모델링(Functional Modeling)_
+- **자료 흐름도(DFD)**를 이용하여 다수의 프로세스들 간의 자료 위주를 중심으로 처리
+- *<u>어떤 데이터를 입력하여 어떤 결과를 구할 것인가</u>*  를 표현함
