--- a/오답노트/240320.md
+++ b/오답노트/240320.md
@@ -481,4 +481,38 @@ int main(int argc, char *argv[]){
 
 3. 기능 모델링(Functional Modeling)_
 - **자료 흐름도(DFD)**를 이용하여 다수의 프로세스들 간의 자료 위주를 중심으로 처리
-- *<u>어떤 데이터를 입력하여 어떤 결과를 구할 것인가</u>*  를 표현함
+- *<u>어떤 데이터를 입력하여 어떤 결과를 구할 것인가</u>* 를 표현함
+
+### 33. 테스트 케이스 생성 도구
+1. 자료 흐름도
+2. 기능 테스트
+3. 입력 도메인 분석
+4. 랜덤 테스트
+
+### 34. 데이터베이스의 무결성 규정
+- 무결성 규정에는 데이터가 만족해야 할 *<u>제약 조건, 규정을 참조할 때 사용하는 식별자</u>*등의 요소가 포함될 수 있다.
+- 무결성 규정의 대상으로는 **도메인, 키, 종속성** 등이 있다.
+- 릴레이션 무결성 규정(Relation Integrity Rules)은 릴레이션을 조작하는 과정에서의 **의미적 관계**(Semantic Relationship)을 명시한 것이다.
+
+
+### 35. 자동 반복 요청(ARQ), 오류 검출 방식(패리티/CRC/해밍)
+#### 자동 반복 요청(ARQ)
+- ARQ란, 통신회선 상에서 오류 발생 시 **수신측은 오류 발생을 송신측에 통보**하고 **송신측은 오류 발생 블록을 재전송**하는 절차를 의미한다.
+
+#### 정지-대기(Stop-and-Wait ARQ)
+- 송신측에서 **한 개의 블록을 전송**한 후 수신측에서 응답을 기다리는 방식
+- 구현 방법은 단순하나, 전송 효율이 떨어짐
+
+#### Go-Back-N ARQ
+- 연속적으로 데이터를 보내는 *<u>연속 ARQ</u>*중 하나
+- **오류가 발생한 블록 이후의 모든 블록을 재전송**
+
+#### 선택적 재전송(Selective Repeat) ARQ
+- 연속적으로 데이터를 보내는 *<u>연속 ARQ</u>*중 하나
+- **오류가 발생한 블록만을 재전송**
+- 수신 측에서 원래 순서대로 조합해야 하므로 복잡해짐
+
+#### 적응적(Adaptive) ARQ
+- 데이터 블록의 크기를 *<u>채널의 상태에 따라 동적으로 변경</u>*
+- 전송 효율이 가장 좋으나, 제어회로가 복잡하고 비용이 많이 들어 거의 사용하지 않음
+
