--- a/오답노트/240320.md
+++ b/오답노트/240320.md
@@ -499,20 +499,52 @@ int main(int argc, char *argv[]){
 #### 자동 반복 요청(ARQ)
 - ARQ란, 통신회선 상에서 오류 발생 시 **수신측은 오류 발생을 송신측에 통보**하고 **송신측은 오류 발생 블록을 재전송**하는 절차를 의미한다.
 
-#### 정지-대기(Stop-and-Wait ARQ)
+1. 정지-대기(Stop-and-Wait ARQ)
 - 송신측에서 **한 개의 블록을 전송**한 후 수신측에서 응답을 기다리는 방식
 - 구현 방법은 단순하나, 전송 효율이 떨어짐
 
-#### Go-Back-N ARQ
+2. Go-Back-N ARQ
 - 연속적으로 데이터를 보내는 *<u>연속 ARQ</u>*중 하나
 - **오류가 발생한 블록 이후의 모든 블록을 재전송**
 
-#### 선택적 재전송(Selective Repeat) ARQ
+3. 선택적 재전송(Selective Repeat) ARQ
 - 연속적으로 데이터를 보내는 *<u>연속 ARQ</u>*중 하나
 - **오류가 발생한 블록만을 재전송**
 - 수신 측에서 원래 순서대로 조합해야 하므로 복잡해짐
 
-#### 적응적(Adaptive) ARQ
+4. 적응적(Adaptive) ARQ
 - 데이터 블록의 크기를 *<u>채널의 상태에 따라 동적으로 변경</u>*
 - 전송 효율이 가장 좋으나, 제어회로가 복잡하고 비용이 많이 들어 거의 사용하지 않음
 
+#### 오류 검출 방식
+1. 패리티 검사
+- 전송 비트에 *<u>1비트의 검사 비트인 패리티 비트를 추가</u>*해 오류 검출
+- 간단하지만 **2개 비트에 동시에 오류 발생 시 검출이 불가능**
+- 오류 **검출만 가능, 수정은 불가능**
+
+2. 순환 중복 검사(CRC)
+- **다형식 코드**를 사용해 오류 검출
+- **동기식 전송**에서 주로 사용
+- HDLC 프레임의 FCS를 만드는 데 주로 사용
+- **집단오류**를 검출할 수 있고 *<u>검출률이 높아</u>* 가장 많이 사용됨
+
+3. 해밍(Hamming) 코드
+- **수신**측에서 오류가 발생한 비트를 검출, **직접 수정**하는 방식
+- *<u>1비트의 오류만 수정 가능</u>*, 정보 비트 외에 *<u>잉여비트</u>*가 필요함
+- 전송 비트 중 *<u>1, 2, 4, 8</u>*.. 번째를 패리티 비트로 사용
+- **해밍 거리**: 송신 비트와 수신 비트 중 서로 다른 비트의 수(*<u>오류 비트의 수</u>*)
+
+4. 상승 코드
+- **순차적 디코딩**과 **한계값 디코딩**을 사용해 오류 수정
+- 여러 비트의 오류 수정 가능
+
+### 36. FLSM vs VLSM
+1. FLSM (Fixed Length Subnet Mask)
+- 서브넷의 길이를 *<u>고정적으로</u>* 사용하는 것
+- 한 대역을 동일한 크기로 나누는 것
+
+2. VLSM (Variable Length Subnet Mask)
+- 서브넷의 길이를 *<u>가변적으로</u>* 사용하는 것
+- 한 대역을 다양한 크기로 나누는 것
+- **사용하지 않는 IP를 최소화 하는 것에 효율적**
+- *<u>크기가 큰 네트워크</u>* 먼저 서브네팅 하는 것이 좋음
