docs: edit docs

--- a/오답노트/240320.md
+++ b/오답노트/240320.md
@@ -548,3 +548,28 @@ int main(int argc, char *argv[]){
 - 한 대역을 다양한 크기로 나누는 것
 - **사용하지 않는 IP를 최소화 하는 것에 효율적**
 - *<u>크기가 큰 네트워크</u>* 먼저 서브네팅 하는 것이 좋음
+
+### 37. 소프트웨어 정의 기술(SDE: Software-Defined Everything)
+소프트웨어 정의 기술은 네트워크, 데이터 센터 등에서 소유한 자원을 가상화하여 개별 사용자에게 제공하고, 중앙에서는 통합적으로 제어가 가능한 기술이다.
+
+1. `소프트웨어 정의 네트워킹(SDN: Software Defined Networking)`
+- 네트워크를 컴퓨터처럼 모델링하여 여러 사용자가 각각의 소프트웨어들로 *<u>네트워킹을 가상화</u>*하여 제어하고 관리하는 네트워크
+- 하드웨어에 의존하는 네트워크 체계에 비해 보다 효율적으로 네트워크를 제어, 관리할 수 있음
+- *<u>기존 네트워크에는 영향을 주지 않으면서</u>* 특정 서비스의 전송 경로 수정을 통하여 인터넷상에서 발생하는 문제를 처리할 수 있음
+
+2. `소프트웨어 정의 데이터 센터(SDDC: Software Defined Data Center)`
+- *<u>데이터 센터의 모든 자원을 가상화</u>*하여 인력의 개입 없이 소프트웨어 조작만으로 관리 및 제어되는 데이터 센터
+
+3. `소프트웨어 정의 스토리지(SDS: Software-Defined Storage)`
+- *<u>물리적인 데이터 스토리지(Data Storage)를 가상화</u>* 하여 여러 스토리지를 하나처럼 관리하거나, 하나의 스토리지를 여러 스토리지로 나눠 쓸 수 있는 기술
+
+### 38. 소프트웨어 상의 설계와 하위 설계
+#### 상위 설계
+- 별칭: `아키텍처 설계`, `예비 설계`
+- 설계 대상: 시스템의 **전체적인 구조**
+- 세부 목록: **구조, DB, 인터페이스**
+
+#### 하위 설계
+- 별칭: `모듈 설계`, `하위 설계`
+- 설계 대상: 시스템의 **내부 구조 및 행위**
+- 세부 목록: **컴포넌트, 자료 구조, 알고리즘**
