docs: edit docs

--- a/오답노트/240320.md
+++ b/오답노트/240320.md
@@ -573,3 +573,41 @@ int main(int argc, char *argv[]){
 - 별칭: `모듈 설계`, `하위 설계`
 - 설계 대상: 시스템의 **내부 구조 및 행위**
 - 세부 목록: **컴포넌트, 자료 구조, 알고리즘**
+
+### 39. Java 언어 접근 제한자
+1. `Public`: 클래스 내부, 패키지 내부, 하위 클래스, 패키지 외부에서 접근 가능
+2. `Protected`: 클래스 내부, 패키지 내부, 하위 클래스에서 접근 가능
+3. `Default`: 클래스 내부, 패키지 내부에서 접근 가능
+4. `Private`: 클래스 내부에서만 접근 가능
+
+### 40. 서비스 지향 아키텍처(SOA: Serviced Oriented Architecture)
+- 기업의 소프트웨어 인프라인 정보 시스템을 공유와 재사용이 가능한 **서비스 단위나 컴포넌트 중심으로 구축**하는 정보기술 아키텍처
+- SOA 기반 애플리케이션 구성 계층: **표현(Presentation)계층, 업무 프로세스(Biz-Process) 계층, 서비스 중간(Information) 계층, 애플리케이션(Application) 계층, 데이터 저장(Resistency) 계층**
+
+### 41. N-S차트(Nassi-Schneidman Chart)
+N-S 차트는 *<u>논리의 기술</u>*에 중점을 둔 **도형을 이용**한 표현 방법으로 박스 다이어그램, Chapin Chart라고도 합니다.
+- *<u>연속, 선택 및 다중 선택, 반복</u>* 등의 제어 논리 구조를 표현합니다.
+- GOTO나 **화살표를 사용하지 않습니다**.
+- 조건이 복합되어 있는 곳의 처리를 시각적으로 명확히 식별하는 데 적합합니다.
+- 선택과 반복 구조를 *<u>시각적으로 표현</u>* 합니다.
+- 이해하기 쉽고, 코드 변환이 용이합니다.
+- 읽기는 쉽지만 작성하기가 어려우며, *<u>임의로 제어를 전이하는 것이 불가능</u>*합니다.
+- **총체적인 구조 표현과 인터페이스를 나타애기가 어렵습니다.**
+- **단일 입구와 단일 출구** 로 표현합니다.
+
+### 42. 객체지향 연관성
+연관성은 두 개 이상의 객체(클래스)들이 상호 참조하는 관계를 말하며 종류는 다음과 같다.
+
+1. `is member of`: 연관화
+- 2개 이상의 객체가 **상호 관련**되어 있음을 의미함
+
+2. `is Instance of`: 분류화
+- *<u>동일한 형의 특성을 갖는 객체들을 모아 구성</u>*하는 것
+
+3. `is part of`: 집단화
+- *<u>관련 있는 객체</u>*들을 묶어 하나의 **상위 객체를 구성** 하는 것
+
+4. `is a`
+- 일반화: *<u>공통적인 성질들로 **추상화**</u>*한 상위 객체를 구성하는 것
+- 특수화/상세화: *<u>상위 객체</u>*를 구체화하여 하위 객체를 구성하는 것
+
