docs: edit docs

--- a/오답노트/240402.md
+++ b/오답노트/240402.md
@@ -30,3 +30,47 @@
 
 - 모든 보안 관련 사건 및 작업을 기록(Log)한 후 보호하는 기능
 - 막대한 양의 기록들을 분석하고 축소하는 기능
+
+### 2. 접근통제 기술
+
+#### 임의 접근통제(DAC: Discrtionary Access Control)
+
+- 임의 접근통제는 **데이터에 접근하는 사용자의 신원에 따라 접근 권한을 부여**하는 방식이다.
+- *<u>데이터 소유자가 접근통제 권한을 지정하고 제어</u>*한다.
+- 객체를 *<u>생성한 사용자가 생성된 객체에 대한 모든 권한을 부여</u>*하고, 부여된 권한을 다른 사용자에게 허가할 수도 있다.
+- 임의 접근통제에 사용하는 SQL 명령어에는 `GRANT`와 `REVOKE`가 있다.
+
+#### 강제 접근통제(MAC: Mandatory Access Control)
+
+- 강제 접근통제는 **주체와 객체의 등급을 비교하여 접근 권한을 부여**하는 방식이다.
+- **시스템**이 접근 통제 권한을 지정한다.
+- 데이터베이스 객체별로 *<u>보안 등급</u>*을 부여할 수 있고, 사용자별로 *<u>인가 등급</u>*을 부여할 수 있다.
+- 주체는 자신보다 보안 등급이 높은 객체에 대해 읽기, 수정, 등록이 모두 불가능하고, 보안 등급이 같은 객체에 대해서는 읽기,수정, 등록이 가능하고, 보안 등급이 낮은 객체는 읽기가 가능하다.
+
+#### 역할기반 접근통제(RBAC: Role Based Access Control)
+
+- 역할기반 접근통제는 **사용자의 역할에 따라 접근 권한을 부여**하는 방식이다.
+- *<u>중앙관리자</u>*가 접근 통제 권한을 지정한다.
+- 임의 접근통제와 같이 강제 접근통제의 단점을 보완하였으며 *<u>다중 프로그래밍 방식에 최적화</u>*된 방식이다.
+- 중앙관리자가 역할이나 권한을 부여하면, 책임과 자질에 따라 역할에 해당하는 권한을 사용할 수 있다.
+
+### 3. 강제 접근(MAC) 모듈의 보안 모델
+
+1. `벨 라파듈라 모델`(Bell-Lapadula Model)
+
+- 군대의 보안 레벨처러 **정보의 기밀성**에 따라 상하 관계가 구분된 정보를 보호하기 위해 사용된다.
+- **보안 취급자의 등급** 을 기준으로 읽기 권한과 쓰기 권한이 제한된다.
+- 자신의 보안 레벨 이상의 문서를 작성할 수 있고, 자신의 보안 레벨 이하의 문서를 읽을 수 있다.
+
+2. `비바 무결성 모델`(Biba Integrity Model)
+
+- 벨 라파듈라 모델을 보완한 *<u>수학적 모듈</u>*로, **무결성을 보장하는 최초의 모델**이다.
+- *<u>비인가자에 의한 데이터 변형을 방지</u>*한다.
+
+3. `클락-윌슨 무결성 모델`(Clact-Wilson Integrity Model)
+
+- 무결성 중심의 *<u>상업용 모댈</u>*로, 사용자가 직접 객체에 접근할 수 없고 **프로그램에 의해 접근이 가능**한 보안 모델이다.
+
+4. `만리장선 모델(Chinese Wall Model)`
+
+- 서로 _<u>이해 충돌 관계에 있는</u>_ 객체 간의 정보 접근을 통제하는 모델이다.
