--- a/오답노트/2024-2.md
+++ b/오답노트/2024-2.md
@@ -1,11 +1,11 @@
 # 2024년 2회
-## 파이썬 f-string 포맷
+### 파이썬 f-string 포맷
 - f'문자열(표현식)' 의 형식으로, 예약어 f 뒤의 작은따옴표 안의 문자열은 그대로 출력하고 중괄호 안의 표현식은 그 결과 값을 출력한다.
 
-## 자바 charAt 메서드
+### 자바 charAt 메서드
 - 문자열의 지정된 인덱스에 있는 문자를 반환한다.
 
-## 카디널리티, 차수
+### 카디널리티, 차수
 - 튜플: 릴레이션을 구성하는 각각의 행
 - 카디널리티: 튜플의 수, 기수, 대응수
 - 속성: 데이터베이스를 구성하는 가장 작은 논리적 단위
